--- a/steins_gate_0/docs/0036.md
+++ b/steins_gate_0/docs/0036.md
@@ -35,17 +35,9 @@
 
 ![](../pics/055.png)
 
-从小店出来后离开建筑物的地方，能看到在人流量少的路面上有辆车子正开过来。是辆美国的RV。
-赶忙藏到其他大楼的阴影里。
-和预想的一样。
-那辆RV停在了我们刚刚出来的杂货店前。
-里面走出了三个男人。
-全都不是日本人。
-身上穿的都是黑色的西装。就像电影黑衣人里的一样。
-不管怎么看都不像是来秋叶原的游客吧。
-真是千钧一发啊。
-真帆看着那些进入建筑的人，脸色都发青了。
-是心理作用吗，好像在发抖啊。
+从小店出来后离开建筑物不远，我们看到有辆车子正开进人流量稀少的小胡同，是辆美国的RV。我们赶忙藏到其他大楼的阴影里。我的预感实现了。那辆RV停在了我们刚刚出来的杂居大楼前，里面走出了三个男人，全都不是日本人，装束都是黑色的西装，就像电影黑衣人里的一样，不管怎么看都不像是来秋叶原的游客吧。  
+“真是千钧一发啊。”  
+比屋定看着那些进入建筑的人，脸色都发青了，身体似乎在微微地颤抖着。  
 这种事……就像是……电影里演的那样……根本没想过这居然是现实存在的……
 但是，那伙人到底是怎么拿到这个小店的情报的？
 难道不是因为桶子的疏忽吗？
