--- a/steins_gate_0/docs/0004.md
+++ b/steins_gate_0/docs/0004.md
@@ -1,6 +1,6 @@
 > <big> **零化域的缺失之环 - 04** </big>  
 > 1.129848  
-> [ 2010/11/23 ] 研讨会后晚宴，雷斯吉宁教授邀请冈伦成为测试者。  
+> [ 2010/11/23 ] 研讨会后晚宴，雷斯吉宁教授邀请冈伦成为测试员。  
 
 我能潜入ATF结束后的慰问会，还多亏了井崎准教授的介绍。由于井崎说，“这是要穿礼服的正式晚宴，好好穿上你的正装来。” 我还特意跑回家去换了衣服。为了参加晚会下了这么大功夫，井崎也第一次向我介绍了一线的研究员们。理化学研究所、宇宙航空研究开发机构、物质构造科学研究所等等。但他马上就为了推销自己跑到别的大学教授那里去了，完全把我放置在一边。  
 一时间我也不知道能干什么，只能和桶子聊一会儿RINE打发时间。
@@ -137,7 +137,7 @@
 比屋定真帆愣了一下，然后吃惊的跟教授确认道：  
 “嗯？……难道是，『Amadeus』？”  
 “能够得以在这里跟他相见也是有缘，难道不去珍惜这份来之不易的幸运吗？  
-&emsp;&emsp; 在日本的这段时间，让他来担任测试者也是可以的哦。”  
+&emsp;&emsp; 在日本的这段时间，让他来担任测试员也是可以的哦。”  
 “认真的吗？明明是外人突然就这么……”  
 “是*Kurisu*的朋友的话，就不是什么外人了。是这样吧？”  
 “可是……”  
@@ -148,7 +148,7 @@
 “那么详细的内容就让*Maho*告诉你。请多关照。”  
 教授被其他研究者叫走了。而比屋定真帆像是表达不可思议一样，摇了摇头。  
 
-“跟『Amadeus』见面，还有测试者什么的，到底是在说什么东西啊？”  
+“跟『Amadeus』见面，还有测试员什么的，到底是在说什么东西啊？”  
 “在发表会上用到的那个示例版『Amadeus』，是用的我自己的记忆。  
 &emsp;&emsp; 而被用作『Amadeus』的数据的，还有一位研究人员的记忆  。”  
 另外一名……研究者的记忆？  
