--- a/steins_gate_0/docs/0005.md
+++ b/steins_gate_0/docs/0005.md
@@ -20,7 +20,7 @@ ATF上的派对结束以后已经过了几天。
 “你也是？”  
 “是啊，要不是那样的话，怎么可能一直睡到午后嘛。”  
 确实…刚才在和光市车站前面的宾馆那碰面的时候，是一脸睡眼惺忪的样子走出来的。  
-我今天就如同雷斯吉宁教授提议的那样，是为了见到『Amadeus』的“红莉栖”而来的。有关测试者的相关内容，在一路走到这里的过程中已经从比屋定真帆那大概了解了。简单来说，好像是『Amadeus』需要对话样本数据，于是要给我创造一种24小时随时能与之对话的环境的样子。更加详细的我就不知道了。  
+我今天就如同雷斯吉宁教授提议的那样，是为了见到『Amadeus』的“红莉栖”而来的。有关测试员的相关内容，在一路走到这里的过程中已经从比屋定真帆那大概了解了。简单来说，好像是『Amadeus』需要对话样本数据，于是要给我创造一种24小时随时能与之对话的环境的样子。更加详细的我就不知道了。  
 要24小时，随时与『Amadeus』的“红莉栖”对话吗……  
 “那家伙……就在这里吗？”  
 “是啊。”
