--- a/steins_gate_0/docs/0008.md
+++ b/steins_gate_0/docs/0008.md
@@ -1,6 +1,6 @@
 > <big> **闭时曲线的碑文 - 03** </big>  
 > 1.129848  
-> [ 2010/11/28 ] 在脑综研办公室与“红莉栖”谈话，正式成为测试者。
+> [ 2010/11/28 ] 在脑综研办公室与“红莉栖”谈话，正式成为测试员。
 
 红莉栖（Amadeus）：“冈部伦太郎先生。初次见面，我是牧濑红莉栖。请多关照。”  
 “…………”  
@@ -16,7 +16,7 @@
 “嗯，什么？”  
 “和冈部伦太郎先生，是什么关系？”  
 “之前参加ATF研讨会的学生哟。因为觉得他对研究相当热心，所以带来了。”  
-比屋定真帆并没有把我是生前红莉栖的熟人这一点告诉『Amadeus』的红莉栖。  
+比屋定真帆并没有把我是红莉栖生前的熟人这一点告诉『Amadeus』的“红莉栖”。  
 为什么呢？告诉她了会不方便？或者说，让我自己去告诉她？  
 “欸？能让学姐这么说，你还真是了不起。”  
 画面中的“红莉栖”面向我微笑着。  
@@ -200,19 +200,19 @@
 
 在那之后，包括雷斯吉宁教授在内，我们三人又进行了许多没营养的还有专业方面的对话。回过神来，已经说了将近一个小时了。在比屋定真帆提议到此为止的时候，我甚至感觉到了一丝寂寞。仅仅一个小时的时间，在『Amadeus』身上感觉到的违和感就消失得一干二净，完全感觉像是在和红莉栖说话一样。  
 在回去之前，雷斯吉宁教授叫住了我，说是有话要说。  
-雷斯吉宁：“你有兴趣来当测试者吗？”  
+雷斯吉宁：“你有兴趣来当测试员吗？”  
 雷斯吉宁教授说的是日语，虽然带着浓重的美式口音，依然让我很惊讶。而他说出的话让我更加惊讶。我歪了歪头。  
-雷斯吉宁：“『Amadeus』的对话样本不够，即使动员我们研究室的所有人。”  
-真帆：“就算这样，『Amadeus』还处在研究阶段，不能不加挑选让所有人都与其接触。”  
+雷斯吉宁：“『Amadeus』的对话样本不够，即使动员我们研究室的所有人——”  
+真帆：“即便如此，『Amadeus』还处在研究阶段，不能不加挑选地让人与其接触。”  
 雷斯吉宁：“这样一来，就想让作为红莉栖的朋友的*Rintaro*你来协助。”  
-好像之前宴会的时候确实说到测试者什么的，原来是这么回事。  
-真帆：“教授和我还要在日本待一段时间，所以就是在这一段时间内想拜托你当测试者。  
+好像之前宴会的时候确实说到测试员什么的，原来是这么回事。  
+真帆：“教授和我还要在日本待一段时间，就在这段时间内想拜托你当测试员。  
 &emsp;&emsp; 想让你做的，总之就是和‘红莉栖’说话。  
 &emsp;&emsp; 没有什么具体的次数限制，你想和她说话的时候就说，这样就好。  
 &emsp;&emsp; 只是，大概一个月两次，希望你对教授和我汇报测试的经过。”  
 雷斯吉宁：“然后，很抱歉没有办法给你报酬。连同这点在内，希望你考虑一下。”  
 “我……”  
-雷斯吉宁：“我能理解，让你和再现逝去的朋友的AI说话，对于你来说是非常残酷的事情。  
+雷斯吉宁：“我能理解，让你和再现逝去的朋友的AI说话，对你来说是非常残酷的。  
 &emsp;&emsp; 要是不愿意参加对话，拒绝也没关系的。”  
 我回想起了刚才和“红莉栖”的对话。  
 在要分别，显示器要关掉的时候，“红莉栖”这样说了：  
