--- a/steins_gate_0/docs/0017.md
+++ b/steins_gate_0/docs/0017.md
@@ -15,7 +15,7 @@
 “哈哈哈，是啊。”  
 雷斯吉宁教授最近经常性地把翻译机佩戴在身上。此外还要求真帆用日语来进行对话。  
 “那么，*Kurisu*与*Rintaro*已经建立了怎样的关系了呢？真期待会面啊。”  
-雷斯吉宁教授与真帆预定现在出发去东京市中心，在那里与冈部伦太郎见面。拜托他做『Amadeus』的测试者已经过去两周了，这将会是他的第一次报告。真帆烦躁的原因当然就是这个了。和冈部先生见面……不对，是与“红莉栖”久别重逢这件事让真帆感到紧张。当然，真帆愿意的话可以24小时随时和“红莉栖”对话。但是成为测试者以来，她就尽量不主动与“红莉栖”进行接触，不想因为自己与其对话而给“红莉栖”增添无谓的噪音。  
+雷斯吉宁教授与真帆预定现在出发去东京市中心，在那里与冈部伦太郎见面。拜托他做『Amadeus』的测试员已经过去两周了，这将会是他的第一次报告。真帆烦躁的原因当然就是这个了。和冈部先生见面……不对，是与“红莉栖”久别重逢这件事让真帆感到紧张。当然，真帆愿意的话可以24小时随时和“红莉栖”对话。但是成为测试员以来，她就尽量不主动与“红莉栖”进行接触，不想因为自己与其对话而给“红莉栖”增添无谓的噪音。  
 “教授，在出发之前能请问一个问题吗？”  
 “尽管问。”  
 “为什么是冈部先生呢？”  
