--- a/steins_gate_0/docs/0019.md
+++ b/steins_gate_0/docs/0019.md
@@ -19,14 +19,14 @@
 &emsp;&emsp; 人是社会性的生物，会因为对象和情况而改变言行。  
 &emsp;&emsp; 也可以将此看作是也能重现那样的行为吧。  
 &emsp;&emsp; 正因为如此，才想要让测试再继续进行一段时间。  
-&emsp;&emsp; 顺便一提，想要放弃的理由是什么呢？与『Amadeus』对话很辛苦吗？”  
+&emsp;&emsp; 顺便一提，想要放弃的理由是什么？与『Amadeus』对话很辛苦吗？”  
 “不……正相反。”  
 “相反？”  
 “与『Amadeus』……与‘红莉栖’对话非常开心。但是……就是这一点让我很害怕。”  
 关于自己心中喷涌而出的感情，虽然一点都没能理清，却还是拼命地说明着，对于将红莉栖和“红莉栖”看作是同一个个体的自己，感到非常害怕。  
 “果然，给你增添负担了啊，真的抱歉。只是，你的反应非常令人感兴趣。  
 &emsp;&emsp; 你能够从非研究者的观点上把握『Amadeus』，也能让我学到不少——  
-&emsp;&emsp; 希望你能谅解我以这种话语和方式表达，毕竟我本质上也是个研究者啊。”  
+&emsp;&emsp; 希望你能原谅我以这种方式表达，毕竟我本质上也是个研究者啊。”  
 “不……我也知道我是在说任性话。”  
 从刚才开始比屋定真帆就一句话也不说，一脸不高兴的样子，一味地检查着『Amadeus』的记录的样子。我都快待不下去了，真希望不要在我在的时候看记录啊。  
 “我知道了。关于放弃测试者身份，就如你希望的办吧。  
