--- a/steins_gate_0/docs/0024.md
+++ b/steins_gate_0/docs/0024.md
@@ -104,7 +104,7 @@
 &emsp;&emsp; 这件事我也真的觉得自己很失礼。  
 &emsp;&emsp; 是因为想起了自己以前的一些事，然后脑子就变得十分乱。  
 &emsp;&emsp; 但是，这并不是因为你的原因。  
-&emsp;&emsp; 在辞去测试者一职之前，想着至少也要和你道一声歉。  
+&emsp;&emsp; 在辞去测试员一职之前，想着至少也要和你道一声歉。  
 &emsp;&emsp; 就是这些。”  
 “噗……”  
 和刚才的比屋定一样，“红莉栖”也忍不住笑了出来。  
