--- a/steins_gate_0/docs/0034.md
+++ b/steins_gate_0/docs/0034.md
@@ -111,7 +111,7 @@
 &emsp;&emsp; 也不是说我不信任你……  
 &emsp;&emsp; 毕竟是关于红莉栖的事情，觉得还是慎重一点的好。”  
 “是啊，你这样的做法是正确的。  
-&emsp;&emsp; 你没有反对让我做『Amadeus』的测试者，也是有所盘算吧？”  
+&emsp;&emsp; 你没有反对让我做『Amadeus』的测试员，也是有所盘算吧？”  
 “不要用盘算这种说法……  
 &emsp;&emsp; 我只是，对于作为红莉栖的朋友的你，想要更多地了解而已。”  
 “为了获取红莉栖的秘密？”  
