--- a/steins_gate_0/docs/0036.md
+++ b/steins_gate_0/docs/0036.md
@@ -38,178 +38,134 @@
 从小店出来后离开建筑物不远，我们看到有辆车子正开进人流量稀少的小胡同，是辆美国的RV。我们赶忙藏到其他大楼的阴影里。我的预感实现了。那辆RV停在了我们刚刚出来的杂居大楼前，里面走出了三个男人，全都不是日本人，装束都是黑色的西装，就像电影黑衣人里的一样，不管怎么看都不像是来秋叶原的游客吧。  
 “真是千钧一发啊。”  
 比屋定看着那些进入建筑的人，脸色都发青了，身体似乎在微微地颤抖着。  
-这种事……就像是……电影里演的那样……根本没想过这居然是现实存在的……
-但是，那伙人到底是怎么拿到这个小店的情报的？
-难道不是因为桶子的疏忽吗？
-你以为我是谁啊？
-超级嗨客咯？
-是黑客呐。我明明很小心翼翼地注意自己的。
-或者也可能是跟踪我和比屋定小姐来的。
-……不要说那么可怕的事啊。
-和光市的办公室和宾馆都被入侵了。比屋定小姐是肯定一直被跟踪着。
-啊，对了。
-真帆好像想起了什么似的，拿出手机打电话。
-不联系教授的话
-最好告诉他今天先藏起来。和教授见面的话可能还会牵连到他。
-对于我说的话，真帆露出微妙的表情点了点头。
-真帆被伦太郎带到的地方，是菲莉丝·喵喵的家。
-坐落于秋叶原中心的某个高层大厦的最顶层。
-至少比起cosplay商店的老式建筑，安全性肯定是上升了几个档次。
-菲莉丝很快招待了真帆和伦太郎，并提供了床铺和食物。
-只有桥田至为了和铃羽碰面，一个人回了未来道具研究所。
-这个笔记本电脑，只是存在着就会招来灾难啊。
-扔掉它可能比较好。
-冷静下来之后，伦太郎开始讨论起关于处理红莉栖的笔记本电脑和硬盘的问题。
-他的意见十分坚定。
-虽然平常的他都是那种会呆在某处，不愿太过强调自身主张的类型。但是对于这件事他却显得十分顽固。
-但是，真帆也是一样的顽固。
-我想至少该解除下锁定确认一下里面的东西吧。
-虽然现在的状况已经山穷水尽到这个也做不到了。
-现在不是说这种悠闲 的话的时候。应该立即丢掉。虽然最好直接在这里破坏掉。
-居然说要破坏掉……这可是红莉栖的遗物啊！
-我原本还以为你是更加理性的人。
-我也原本还以为你不是那么冷漠的人。
-对于真帆的话，伦太郎楞了一下，说不出话来。
-——这个人，到底在瞒着什么啊。
-真帆这么想到。
-很容易就能猜到，这恐怕是和红莉栖有关的事吧。
-所以，在中午急急忙忙没问的事，借着这个机会也毫不客气地质问了出来。
-虽然我感觉你可能瞒着一些关于红莉栖事件的一些秘密。
-……我知道的事什么的，都是些无关紧要的事。
-真帆觉得伦太郎无论如何都想回避这个话题。
-中午的时候，没有那件事的介入的话，他应该已经说出来了吧。
-比起这些，现在这个笔记本电脑该怎么办？
-这已经不是什么朋友的遗物的问题了。
-是会引起国家规模的争夺战的东西。
-到底在说什么阴谋论呀。
-都到这种时候了你还要说这是阴谋论吗？
-你也看到了吧。那些穿着黑色西装的外国人。
-你一直去的办公室和住着的酒店都被入侵了。
-红莉栖的家也被放火烧了。
-在放火事件后，你的研究室里也有自称FBI的神秘男子为了调查而来。
-之前在酒店的停车场被袭击的事，可能也有关系！
-平常绝对碰不到的事，一个接一个地出现。这可绝不是偶然啊。
-就算这样，国家规模什么的……
-对于真帆来说，她还处于云里雾里的状态。
-给所有事情强加上关联性的话，就会让人容易掉入阴谋论者的圈套。
-但是事实是，世界上发生的很多事，并没有那么复杂的原因。
-刚想这样反驳，伦太郎又继续说了更多让真帆震惊的话。
-事态之后会像约翰·提托说的那样进展吧。
-约翰·提托？
-那个名字，真帆并不知道。
-在十年前美国的网络论坛上出现过的人物。从2036年乘坐时间机器来的，自称为未来人。
-我知道那家伙是个真人。也见过。
-按照约翰·提托的话来说，2015年会爆发第三次世界大战。
-战争的导火索是，时间机器。
-……你在把我当笨蛋吗？
-我是认真的。
-你说过很想知道中钵博士的事呢。
-那家伙是红莉栖的爸爸。
-中钵论文可能和红莉栖也有关。
-……你……你说什么？
-中钵论文，真帆也曾抱着很大兴趣读过。
-去年夏天，逃亡去俄罗斯之后，轰轰烈烈地发表了有关时间机器的论文。
-虽然那是中钵论文，但内容全是很幼稚的，没什么阅读价值的东西。
-那个论文和红莉栖有关什么的，是怎么都不可能相信的吧。
-论文是劣化过的。但是如果红莉栖写的原稿还存在的话？
-红莉栖留下的笔记本电脑和移动硬盘。那之中实际有着什么，已经没关系了。
-只是，确实有组织想要得到那东西。
-等，等下……让我少许整理下思路……
-伦太郎的话究竟是真是假。
-稍微冷静一下，想想看吧。
-普通的状况来看，肯定会把这种东西当作奇怪的闲话，连听都不听吧。
-但是，真帆最近在这遭遇的事，却并不普通。
-所以不能明确否定伦太郎的话。
-确实，真帆自己也当然考虑过一点类似阴谋论的事。
-……其实我也有想过可能这个电脑被人盯上了。
-只是，你说的话和我想的也差的太远了。
-你想的是？
-我曾想过会不会要把Amadeus用来做军事武器什么的。
-军事转用……
-虽然红莉栖也一直出入精神生理学研究所。但她说有时候那边总会有奇怪的人。
-好像有点像是国防总省的人
-Amadeus，能杀人吗？！怎么做？
-比如，把身经百战的飞行员的记忆拷贝下来，写入无人机的控制程序里什么的。
-还有，以前也说过的在医疗方面的应用。还记得吗？
-额额，……往人的脑子里覆盖记忆数据什么的？
-是的。
-在记忆的修正之上，还能做到覆盖的话，就可能做出毫无畏惧的士兵，或者不论多么非人道的任务都能轻松执行的部队这种很可怕的东西。
-我还以为，红莉栖是不是偶然掌握了这些实验的证据。
-那么，对于Amadeus的研究，美军有参与吗？……应该没吧？
-怎么可能参与呢？
-真的能这么断言吗？你说到底也只是一个研究人员，并不是这个项目的总负责人。
-雷斯吉宁教授的话，也不会让军队来参与的吧。
-也是呐。
-那也是别的世界线的话题了。
-世界线？什么东西？
-不，还是请忘掉吧。可能是我想太多了。
-并不是很好的转移话题的说辞。
-这样的说法，让真帆心里起了个疙瘩。
-结果，虽然想再多问一些约翰·提托的事，但伦太郎却不愿意再说了。
-红莉栖的笔记本电脑和移动硬盘也无法解除锁定，真帆即使拿着也没用。
-而且就像伦太郎说的那样，恐怕会有袭击者的存在。
-所以，不得已只能交给他了。
-是不是要破坏掉，他却没有直截了当地说出来。
-Maho，你没事真是太好了。
-真帆来到和光市的办公室后，和已经到了的雷斯吉宁教授张开双手，跟那大大的身体进行了一个拥抱。
-教授……！好痛苦！
-哦哦，抱歉。Hahaha
-虽说办公室被入侵了，但却已经没了入侵的痕迹。早已被整理得很干净了。
-是教授整理的吗？
-虽然是被入侵了，但是这里本身也只有我和Maho在使用，而且东西也不多呢。
-之后的就交给警察吧。
-从办公室被袭击后，已经过了两天了。
-真帆昨天，——昨天在菲莉丝家度过的，今天和雷斯吉宁教授取得联络，所以来和光市取行李了。
-明天就和一开始预定的那样，准备回国了，
-因此，也要和这个办公室说再见了吧。
-犯人的话，好像还没抓到吧？
-嗯。
-自从来了日本后，灾难就不停啊。
-是啊……
-两个人张望了下已经空空如也的办公室。
-不管怎么说也是不安宁的两个月啊。
-Maho怎么样呢？毕竟日本也是一个故乡吧？感想是？
-想要快点回到大学，埋头开始做研究啊。因为这两个月只是一昧的在搜集资料。
-Hahaha，Maho可真认真啊。
-还有……能够感受这红莉栖度过了最后的时光的国家的空气……真是太好了。
-Maho……
-只是，红莉栖到底是怎么死的，真帆还没得出那个真相。这个疑问自从来日本后更加的厉害了。
-无奈只能这样带着这个疙瘩回国，真是令人咬牙切齿啊。
-至少如果伦太郎把所有事都说了的话……
-这么说起来
-这时真帆突然想了起来。
-Amadeus的测试员的事，要怎么办？
-当然，是冈部伦太郎的事。
-真帆和雷斯吉宁教授要回国了的话，拜托伦太郎测试员的事也不得不结束了。
-Hum，也是呢……
-为什么教授要这般沉思，真帆有点困惑。
-还以为是根本不用想的事，难道不对吗。
-虽然我想让测试的事就这样继续下去，你觉得呢？
-欸？
-您认真的吗？
-其实，和Rintaro说话之后，“Kurisu”也做出了我们未曾看到过的反应不是么？
-今后，不止他一个，我也打算让更多人来做测试者。
-在安全的层面上，不会有不安因素吗？
-美国和日本离得太远了，要是出了什么问题的话，我们无法处理啊。
-没关系的，因为我信任着Rintaro啊。
-不是，不是信任不信任的问题……
-而且，如果继续测试的话，Maho也能定期和Rintaro联络哟？
-啥？和我没关系的吧？！
-是这样吗？
-当然是这样咯！
-那么之后和Rintaro联络的事，就让我直接来做吧。
-没，我没意见啊。
-虽然感觉是在岔开话题，但真帆因为害羞也没有能往下追究。
-只是，雷斯吉宁教授这么中意伦太郎，还是挺意外的。
-从相遇的那一刻起，教授就对叫做伦太郎的青年特别好。
-只是单纯欣赏，或者因为他是红莉栖的朋友，还是说别的什么原因。
-对真帆来说，她并不知道。
-——第二天。
-真帆和雷斯吉宁教授照预定的那样从成田机场回美国了。
-来送行的伦太郎，在和雷斯吉宁教授谈论到继续测试者一职的事时，连他自己都惊了一下。
-——然后，半年的时间过去了。
+“这种事……就像是……电影里演的那样……根本没想过居然会发生在现实中……”  
+“但是啊，那伙人到底是怎么得到这个小店的情报的？”  
+“不是因为桶子你的疏忽吗？”  
+“你以为我是谁啊？”  
+“超级嗨客咯？”  
+“是黑客。我明明很小心翼翼地注意的。”  
+“或者也可能是，跟踪我和比屋定小姐来的……”  
+“不要说那么可怕的事啊……”  
+“和光市的办公室和宾馆都被洗劫了，比屋定小姐肯定是一直被跟踪着。”  
+“啊，对了。”  
+比屋定好像想起了什么似的，拿出手机打电话。  
+“不联系教授的话……”  
+“告诉他你今天会先躲到安全的地方就好了。和教授见面的话可能会牵连到他。”  
+对于我的话，比屋定露出微妙的表情点了点头。  
 
+比屋定被伦太郎带到了菲莉丝·喵喵的家，坐落于秋叶原中心的某个高层大厦的最顶层，比起cosplay商店的老式建筑，安全性肯定是上升了几个档次。菲莉丝愉快地招待了二人，并提供了床铺和食物。而桥田至为了和铃羽碰面，一个人回了未来道具研究所。  
+“这个笔记本电脑，只是存在本身就会招来灾祸，舍弃它可能比较好。”  
+状况稳定下来之后，伦太郎开始讨论起关于处理红莉栖的笔记本电脑和硬盘的问题。他的意见十分坚定。虽然平常的他都是那种会呆在某处，不愿太过强调自身主张的类型。但是对于这件事他却显得十分顽固。但是，比屋定也是一样的顽固。  
+“我想至少应该解锁之后确认下里面的内容吧。虽说以现况看来这个还做不到……”  
+“现在不是说这种悠闲的话的时候。应该立即舍弃掉，最好是直接在这里破坏掉——”  
+“居然说要破坏掉……这可是红莉栖的遗物啊！”  
+“我还以为你是更有逻辑性的人。”  
+“我也以为你不是那么冷漠的人。”  
+“……”  
+对于比屋定的话，伦太郎楞了一下，刹那间露出了可怕的表情。  
+——这个人，到底在隐瞒着什么啊？比屋定在心里想着。能轻易猜到的部分是，这应该是和红莉栖有关的事。所以，她决定借着这个机会，把中午匆忙间没能问的问题毫不客气地质问出来。  
+“我感觉，关于红莉栖事件，你可能隐瞒着什么——”  
+“……我知道的都是些无关紧要的事。”  
+比屋定感觉伦太郎无论如何都想回避这个话题。中午在那个工作室的时候，如果没有那件事的介入的话，他应该已经说出来了吧。  
+“比起这些，现在最重要的是这台笔记本电脑应该怎么处理。  
+&emsp;&emsp; 这已经不是什么‘朋友的遗物’这种级别的问题了，  
+&emsp;&emsp; 而是会引起国家规模的争夺战的东西。”  
+“到底在说什么阴谋论呀。”  
+“都到这种时候了你还要说这是阴谋论吗？  
+&emsp;&emsp; 你也看到了吧，那些穿着黑色西装的外国人；  
+&emsp;&emsp; 你一直在的办公室和住着的酒店都被洗劫了；  
+&emsp;&emsp; 红莉栖的家也被纵火了；  
+&emsp;&emsp; 纵火事件后，你的研究室也有自称FBI的神秘男子为了调查而来；  
+&emsp;&emsp; 之前在酒店的停车场被袭击的事，说不定也有什么关联。  
+&emsp;&emsp; 平常绝对碰不到的事，一个接一个地发生，这绝非偶然。”  
+“就算这样，国家规模什么的……”  
+对于比屋定来说，她还处于云里雾里的状态。给所有事情强加上关联性，就会让人容易掉入阴谋论者的圈套。但事实是，世界上发生的很多事，并没有那么复杂的原因。刚想这样反驳，伦太郎又继续说了更多让比屋定震惊的话。  
+“事态在此之后将会像约翰·提托预言的那样发展吧。”  
+“约翰·提托？”  
+那个名字，比屋定并不知道。  
+“十年前美国某个网络论坛里出现的人物。从2036年乘坐时间机器来的，自称未来人。  
+&emsp;&emsp; 我知道那家伙是真的，也见过面。  
+&emsp;&emsp; 约翰·提托曾说过，2015年会爆发第三次世界大战。  
+&emsp;&emsp; 战争的导火索是，时间机器。”  
+“……你在把我当笨蛋吗？”  
+“我是认真的。  
+&emsp;&emsp; 你说过很想知道中钵博士的事吧。  
+&emsp;&emsp; 那家伙，是红莉栖的父亲。  
+&emsp;&emsp; 《中钵论文》也可能和红莉栖有关。”  
+“……你……你说什么？”  
+《中钵论文》，比屋定也曾抱着很大兴趣读过。去年夏天，那个人逃亡去俄罗斯之后，轰轰烈烈地发表了的关时间机器的论文。但内容全是很幼稚又拙劣的，没什么阅读价值的东西。那种论文和红莉栖有关？怎么都不可能相信的吧。  
+“如果说那个论文是劣化版，存在着红莉栖自己写的原稿的话？”  
+“啊……！”  
+“红莉栖留下的笔记本电脑和移动硬盘，那之中实际存着什么，已经不重要了。  
+&emsp;&emsp; 只要那东西有可能在就会有组织想要得到。”  
+“等，等下……让我稍微整理下思路……”  
+伦太郎的话是否属实，稍微冷静一下，想想看吧。通常情况下，肯定会把这种东西当作奇怪的闲话，连听都不听吧。但是，比屋定最近在这遭遇的事，却并非通常。所以不能明确否定伦太郎的话。确实，比屋定自己也当然有过一点类似阴谋论的想法。  
+“……其实我也有过，这个电脑被人盯上了的预感。  
+&emsp;&emsp; 只不过，你说的话和我的预测差的太远了……”  
+“你的预测是？”  
+“我曾想过会不会是『Amadeus』的军事转用之类的事。”  
+“军事转用……？”  
+“红莉栖经常出入精神生理学研究所，她说会时不时地在那边看到无关人员。  
+&emsp;&emsp; 说不定是国防总省的人。”  
+“『Amadeus』能够杀人吗？要怎么做到？”  
+“比如说，拷贝身经百战的飞行员的记忆数据，写入无人战斗机的控制程序里什么的。  
+&emsp;&emsp; 还有，以前说过的在医疗方面的应用，还记得吗？”  
+“那个……向人类的大脑里重新写入记忆数据什么的？”  
+“对。如果能实现记忆数据的修改并重新写入，就可能制造出‘没有恐惧感的士兵’，  
+&emsp;&emsp; 或者‘不论多么非人道的任务都能轻松执行的部队’这种很可怕的东西。  
+&emsp;&emsp; 我还以为，红莉栖是不是偶然掌握了这些实验的证据。”  
+“啊……那，『Amadeus』的研究中，美军的参与……应该没有吧？”  
+“这怎么可能呢？”  
+“真的能这么断言吗？你只不过是研究人员，又不是这个项目的总负责人。”  
+“雷斯吉宁教授的话，也不会让军队来参与的吧。”  
+“也是呢……那只是别的世界线的话题……”  
+“世界线？什么东西？”  
+“不，请忘掉吧。可能是我想太多了。”  
+并不是很好的转移话题的说辞。这样的说法，让比屋定心里起了个疙瘩。结果，虽然想再多问一些约翰·提托的事，但伦太郎却不愿意再说了。红莉栖的笔记本电脑和硬盘也无法解除锁定，比屋定即使拿着也没用。而且就像伦太郎说的那样，恐怕还会有袭击者的存在。所以，不得已只能交给他了。是不是要破坏掉，他却没有明确表示。  
 
+“*Maho*，你没事真是太好了！”  
+比屋定来到和光市的办公室后，已经到了的雷斯吉宁教授张开双臂，用高大的身体给了她一个大大的拥抱。  
+“教授……好难受！”  
+“哦哦，抱歉。*Hahaha！*”  
+办公室已经被整理得很干净了，没有任何入侵的痕迹。  
+“是教授你整理的吗？”  
+“虽说是被洗劫了，但是这里本身也只有我和*Maho*在使用，东西也不多呢。  
+&emsp;&emsp; 之后的就交给警察吧。”  
+自从办公室被洗劫，已经过了两天。比屋定前天和昨天都是在菲莉丝家度过的，今天和雷斯吉宁教授取得联络，所以来和光市取行李。明天就和一开始预定的那样，准备回国，因此也要和这个办公室说再见了。  
+“犯人好像还没抓到吧？”  
+“啊。自从来了日本，灾难就不停啊。”  
+“是呢……”  
+两个人环视着已经空空如也的办公室。不管怎么说也是不得安宁的两个月啊。  
+“*Maho*觉得怎么样呢？毕竟日本也是你的另一个故乡吧？感想如何？”  
+“想要快点回到大学，埋头开始做研究啊。这两个月只是一味地在整理资料。”  
+“*Hahaha*，*Maho*真是认真啊。”  
+“还有……能够感受这红莉栖度过了最后时光的国家的气氛……真是太好了。”  
+“*Maho*……”  
+只是，还没有弄清楚红莉栖死亡的真相，来日本之后更是多了不少疑团，并且只能这样无可奈何地带着疙瘩回国，真是令人咬牙切齿。如果伦太郎把所有事都说出来的话……  
+“说起来……『Amadeus』的测试员的事，要怎么办？”  
+想起冈部伦太郎于是就想到了这件事。比屋定和雷斯吉宁教授回国了的话，伦太郎的测试员身份也不得不结束了。  
+“*Hum……*也是呢……”  
+教授莫名开始沉思起来，让比屋定有点困惑。还以为是根本不用想的事，难道不对吗？  
+“我想让测试的事就这样继续下去，你觉得怎么样？”  
+“欸？！您认真的吗？”  
+“实际上你不是也看到了吗，  
+&emsp;&emsp; 和*Rintaro*说话时，‘*Kurisu*’做出了前所未有的反应。  
+&emsp;&emsp; 今后，不止是他，我也打算找更多的测试员参与进来。”  
+“在安全的层面上，不会有不安因素吗？  
+&emsp;&emsp; 美国和日本离得这么远，要是出了什么问题，我们无法应对啊。”  
+“没关系的，因为我信任着*Rintaro*呢！”  
+“不，这不是信不信任的问题……”  
+“而且，如果继续测试的话，*Maho*也能定期和*Rintaro*联络哟？”  
+“啥？！和我没关系的吧？！”  
+“是这样吗？”  
+“是的哟！”  
+“那么之后和*Rintaro*联络的事，就由我直接进行吧。”  
+“没、没意见啊。”  
+虽然感觉是被岔开话题了，但比屋定也因为害羞没能继续追究。只是，雷斯吉宁教授这么中意伦太郎，还是挺意外的。从相遇的那一刻起，教授好像就对这位叫做伦太郎的青年特别有好感。只是单纯欣赏，或者因为他是红莉栖的朋友，还是说别的什么原因？比屋定并不知道。  
+
+第二天，比屋定和雷斯吉宁教授按照预定从成田机场回美国了。来送行的伦太郎，在和雷斯吉宁教授谈论到继续测试员一职的事时，显得十分吃惊。  
+
+然后，半年的时间过去了。  
 
 
 <br/>
