--- a/steins_gate_0/docs/0036.md
+++ b/steins_gate_0/docs/0036.md
@@ -1,6 +1,6 @@
 > <big> **永劫回归的潘多拉 - 09a** </big>  
 > 1.129954  
-> [ 2011/01/21 ] 优先“红莉栖”。
+> [ 2011/01/23 - 2011/01/26 ] 优先“红莉栖”，躲开黑衣人。事后在菲利斯住所，冈伦与真帆交流中钵论文的红莉栖原稿与Amadeus军用化情况。真帆和教授回国，继续让冈伦担任测试员。
 
 对于“红莉栖”这个时候打来很是在意，于是我对二人解释了一下，接起了电话。  
 “嗯？怎么了？”  
