--- a/steins_gate_0/docs/0010.md
+++ b/steins_gate_0/docs/0010.md
@@ -4,7 +4,7 @@
 
 比屋定真帆回想起了，和后辈牧濑红莉栖最后一次面对面交谈的夜晚。  
 
-[ 2010/03/28 21:18 维克多·孔多利亚大学 脑科学研究所]  
+[ 2010/03/28 21:18 维克多·孔多利亚大学 脑科学研究所 ]  
 “别开玩笑了，在这种重要时期，为什么会是我……”  
 那夜，真帆的后辈，牧濑红莉栖一直在不停地自言自语。  
 维克多·孔多利亚大学的脑科学研究所。在那里，真帆和红莉栖用的是同一个研究室。因此，全身散发着不高兴气场的红莉栖的自言自语，无论如何真帆都会听到。要只是一点点自言自语的话还是完全可以忍受的。但是从早晨开始一直都是这个样子，让真帆完全没有办法集中精力做研究。感到厌烦的真帆停下了手中正在写的论文。  
@@ -104,7 +104,7 @@
 但是……真帆和红莉栖，两人的约定，到最后都没有实现。  
 不仅如此，甚至连再次见面都已经做不到了。  
 
-[ 2010/11/28 21:18 日本和光市 脑综研准备室]  
+[ 2010/11/28 21:18 日本和光市 脑综研办公室 ]  
 自从到了日本，像这样想起红莉栖的次数日渐增加。是因为到了日本，还是和『Amadeus』的“红莉栖”交流增加的缘故，真帆自己也不清楚。还是说……是因为和名为冈部伦太郎的青年的相遇吗？  
 “我所不知道的……认识红莉栖的人……吗……”  
 回想起来，在第一次见面那天，自己就在冈部伦太郎面前流下了眼泪。回忆起这件不愿想起的事，害羞的真帆急忙停下自己的回忆。  
@@ -121,7 +121,7 @@
 “喜欢吗？”  
 “你啊！”  
 真帆忍不住站了起来，靠向电脑屏幕。但是“红莉栖”却一脸清爽。  
-“也没有掩饰的必要嘛。昨天毕竟是在他本人面前，所以没有办法。现在只有我们两个人哦~”  
+“也没必要掩饰嘛。昨天毕竟是在他本人面前所以没有办法。现在只有我们两个人哦~”  
 话说红莉栖看起来很死板，但却意外地喜欢这种八卦，不如说是闺蜜间的私房话。真帆叹了口气，坐回椅子上。在只有她们的办公室里，椅子的摩擦声响了起来。  
 “真的没有那种感情。就连冈部先生是个怎样的人，也还没有完全明白。”  
 “原来如此。嘛，也是呢。”  
@@ -144,7 +144,7 @@
 “只有对方一人拥有和‘我’一起的记忆的话，在对话中产生不一致的可能性会很高。”  
 “和他说话的过程中究竟该怎么办就交给你了。  
 &emsp;&emsp; 说不定冈部先生会主动提出，要不然你主动去问也可以。”  
-冈部伦太郎究竟会不会找『Amadeus』说话，现在也不知道。因为测试并不是强制性的。  
+冈部伦太郎究竟会不会找『Amadeus』说话，现在也不知道。因为测试并非强制性的。  
 “嗯……**装作不知道的样子**的话，和说谎是一样的呢……感觉会拿到很有趣的资料。”  
 是的，确实很有意思，真帆是这样想着的。但那个是『Amadeus』在研究方面的意见。对与冈部伦太郎这位青年来说是什么？这不是向他心中的伤口撒盐的行为吗？想到这里，真帆注意到，自己变得太过感伤了。  
 “果然是因为来到了日本的原因吗……”  
