--- a/steins_gate_0/docs/0012.md
+++ b/steins_gate_0/docs/0012.md
@@ -14,7 +14,7 @@
 “**爸爸**！”  
 铃羽如此称呼桶子。事实就是如此，也没有别的称呼方式。因为铃羽是乘坐着时间机器，从2036年来的时间旅行者，而她的父亲正是**7年之后的桥田至**。  
 “你正经一点好不好？成天无所事事，要么吃要么上网，要么就打游戏……  
-&emsp;&emsp; 我警告你多少回了？每天净吃些方便面和零食会让身体产生病变，你就是听不进去！”  
+&emsp;&emsp; 我警告你多少回了？每天只吃些方便面和零食会让身体产生病变，你就是听不进去！”  
 实际上，电脑桌上散落着许多膨化食品的碎渣子，尽管定时清理，仍不见减少的迹象。  
 “我还劝你多运动，可你根本不上心！”  
 铃羽也心知自己最近变得有些啰嗦，可是有些话不说不行。  
@@ -51,7 +51,8 @@
 “真心别介……”  
 铃羽把那个喷雾放回了架子。顺便一提，它是以前来这里过夜的冈部伦太郎忘记拿走的。现在它被闲置在这里，而主人也不来拿走它。  
 “要是漫画或游戏里，责怪父亲的女儿应该这样，萌得爆表——  
-&emsp;&emsp; 铃羽铃羽，你那个，能不能说，‘矮油，爸拔不要啦’？最好用撒娇的口气……  
+&emsp;&emsp; 铃羽铃羽，那个，你能不能说，  
+&emsp;&emsp; ‘矮油，爸拔不要啦’？最好用撒娇的口气——  
 &emsp;&emsp; 这话当我没说是也……”  
 被铃羽恶狠狠地一瞪，桶子立马怂了。  
 “唉……”  
@@ -103,7 +104,7 @@
 桶子揉着手腕站起来，捡起掉落在地上的Dr. Pepper罐子，并把其中一个递到铃羽手上。  
 “话说啊，现在放弃还太早了，再稍微努力看看吧。  
 &emsp;&emsp; 冈伦可能只是累得睡着了而已。  
-&emsp;&emsp; 像刚刚那样，拿着冰镇的Dr. Pepper顶到他的脖子上，就会跳起来了吧。  
+&emsp;&emsp; 像刚刚那样，拿冰镇Dr. Pepper顶到他的脖子上，就会跳起来了吧。  
 &emsp;&emsp; 毕竟你看，是**那个**冈伦啊。”  
 “……嗯。”  
 明白这是父亲式的鼓励，铃羽点了点头。  
