--- a/steins_gate_0/docs/0016.md
+++ b/steins_gate_0/docs/0016.md
@@ -1,6 +1,6 @@
 > <big> **闭时曲线的碑文 - 11** </big>  
 > 1.129848  
-> [ 间章5 ] 广播管楼顶，相隔35年的对话。发现可疑人员，但没有追到。
+> [ 间章 ] 广播管楼顶，相隔35年的对话。发现可疑人员，但没有追到。
 
 [ 1975/08/13 13:05 ]
 
