--- a/steins_gate_0/docs/0019.md
+++ b/steins_gate_0/docs/0019.md
@@ -1,8 +1,8 @@
 > <big> **双体福音的契约 - 01** </big>  
 > 1.129848  
-> [ 2010/12/15 ] 第一次测试报告，冈伦放弃测试者身份，暂时保留登录权限。与真帆聊起红莉栖死后发生的异常事件，真帆想要了解真相被搪塞。
+> [ 2010/12/15 ] 第一次测试报告，冈伦放弃测试员身份，暂时保留登录权限。与真帆聊起红莉栖死后发生的异常事件，真帆想要了解真相被搪塞。
 
-“我想……放弃测试者身份。”  
+“我想……放弃测试员身份。”  
 这样说出口后，雷斯吉宁教授和比屋定真帆都一副诧异的表情看着我。  
 会面的地点定在市内的高级酒店的其中一间房间。就像秘密会谈一样，就是大片里常有的那种情景——至于为什么这么想，大概是因为中二病的残渣一类的东西还留在我的身体中吧。  
 “突然说出这种话……太不负责任了！”  
@@ -29,7 +29,7 @@
 &emsp;&emsp; 希望你能原谅我以这种方式表达，毕竟我本质上也是个研究者啊。”  
 “不……我也知道我是在说任性话。”  
 从刚才开始比屋定真帆就一句话也不说，一脸不高兴的样子，一味地检查着『Amadeus』的记录的样子。我都快待不下去了，真希望不要在我在的时候看记录啊。  
-“我知道了。关于放弃测试者身份，就如你希望的办吧。  
+“我知道了。关于放弃测试员身份，就如你希望的办吧。  
 &emsp;&emsp; 只是，登录权限就这样留在你的手机上，你不介意吧？”  
 “欸？”  
 “今后，与『Amadeus』对话也好，不对话也好，都是你的自由。  
