--- a/steins_gate_0/docs/0025.md
+++ b/steins_gate_0/docs/0025.md
@@ -7,7 +7,7 @@
 “……不可以的哟，铃羽姐。这种事是不可以做的！  
 &emsp;&emsp; 改变世界是不可以的！姐姐在说很奇怪的话！  
 &emsp;&emsp; 消除这个世界什么的是不可以的！绝对不会让你这么做的！”  
-时间机器内部被刻下的弹孔。让铃羽想起了曾经在这个机器里发生的事。那个时候是和篝最后的一次交谈。没有防范而被篝拿到了枪，然后被她用枪指着额头听到了这番奇怪的话。虽然最终打歪了，铃羽相信当时的篝是真的有射击自己的想法。之后，就再也找不到篝了。  
+时间机器内部被刻下的弹孔。让铃羽想起了曾经在这个机器里发生的事。那个时候是和篝最后的一次交谈。篝用枪指着她的额头说了这番奇怪的话。之后，就再也找不到篝了。  
 “铃羽，怎么在发呆？难道身体还是不舒服吗？”  
 “欸？”  
 当铃羽回过神来的时候，身为父亲的桶子正很担心地窥探着她，然后递来了螺帽。  
@@ -32,7 +32,7 @@
 铃羽对这句话却很反感。  
 “比起这个，我不希望你不经我同意就告诉冈伦叔叔。”  
 “唔……”  
-铃羽把每天搜寻篝的事都和桶子坦白了之后，桶子把和伦太郎说过了的事告诉了她。这虽然也不是什么不可以的事，但是毕竟铃羽和冈伦现在的关系很微妙。而且现在变得不好再拜托他坐上时间机器了，这也是不争的事实。  
+铃羽把每天搜寻篝的事都和桶子坦白了之后，桶子把和冈伦商量过的事告诉了她。这虽然也不是什么不可以的事，但是毕竟铃羽和冈伦现在的关系很微妙。而且现在变得不好再拜托他坐上时间机器了，这也是不争的事实。  
 “话说，从刚才就陷入苦战了吧？”  
 “有个螺丝在不好拧的地方。”  
 “哪个？让我来吧，这点事总可以吧？”  
@@ -75,7 +75,7 @@
 &emsp;&emsp; 因为讨厌战争，所以才要改变世界。  
 &emsp;&emsp; ——这样单纯点会不会比较好？  
 &emsp;&emsp; 而且啊，我的话，也不想要去参与战争什么的。  
-&emsp;&emsp; 我这样的人和铃羽不同，要是带着我上战场，估计三天都坚持不了呢。”  
+&emsp;&emsp; 我这样的人和铃羽不同，要是带我上战场，估计三天都坚持不了呢。”  
 “真没出息啊……真是幻灭了。”  
 铃羽叹了一口气，就这样背过身走了。  
 “哎？你要去哪？”  
