--- a/steins_gate_0/docs/0032.md
+++ b/steins_gate_0/docs/0032.md
@@ -38,7 +38,7 @@
 “之前说过吧？为了找篝，1998年以来，使用过好几次时间机器。  
 &emsp;&emsp; 这些是当初计划以外的行动，理所当然的，  
 &emsp;&emsp; 控制机器的计算机的使用次数也比预定的多了……”  
-“因此才电池消耗掉了嘛。”  
+“因此电池才消耗掉了么。”  
 “比起机器的燃料，这里的问题更严重呢。  
 &emsp;&emsp; 想要正确控制机器进行时间跳跃，变得困难了。”  
 “电池的话，更换或者充电不就行了吗？”  
