--- a/steins_gate_0/docs/0033.md
+++ b/steins_gate_0/docs/0033.md
@@ -47,20 +47,17 @@
 “什，什么都不是！忘了吧。”  
 手机画面中的“红莉栖”射出可怕又冰冷的视线，还是装作没看到吧……  
 “比屋定小姐，想要那个玩偶吗？”  
-“哎，不是很可爱吗？  
-&emsp;&emsp; ——对吧，‘红莉栖’？”  
+“哎，不是很可爱吗？——对吧，‘红莉栖’？”  
 “等……前，前辈？！”  
 “什么？为什么这么慌张？”  
 “……没什么……”  
 比屋定突然促狭地笑着把话题抛给“红莉栖”，被发现了吗？  
-“稍微有点意外啊。因为刚才你说喜欢零件的，  
-&emsp;&emsp; 我还以为你在感性方面更接近男性一些呢。”  
+“稍微有点意外啊。因为刚才你说喜欢零件，我还以为你在感性方面更接近男性呢。”  
 “冈部！说话不走心啊，你这人！  
 &emsp;&emsp; 说点好听的话啊。‘你这种反差好棒啊’之类的。”  
 我自以为很自然地承接了话题，结果受到了“红莉栖”的严厉批评，才后知后觉。  
 “啊……不好意思……”  
-“没关系啦。  
-&emsp;&emsp; 实际上呢——红莉栖的卧室里一直摆着这样的玩偶呢。”  
+“没关系啦。实际上呢——红莉栖的卧室里一直摆着这样的玩偶呢。”  
 “是这样吗……？”  
 “哇啊啊！前辈！”  
 果然暴露了啊……“红莉栖”。我习惯性地开始调笑她：  
