--- a/steins_gate_0/docs/0036.md
+++ b/steins_gate_0/docs/0036.md
@@ -1,6 +1,6 @@
 > <big> **永劫回归的潘多拉 - 09a** </big>  
 > 1.129954  
-> [ 2011/01/23 - 2011/01/26 ] 优先“红莉栖”，躲开黑衣人。事后在菲利斯住所，冈伦与真帆交流中钵论文的红莉栖原稿与Amadeus军用化情况。真帆和教授回国，继续让冈伦担任测试员。
+> [ 2011/01/23 - 2011/01/26 ] 优先“红莉栖”，躲开黑衣人。事后在菲利斯住所，冈伦与真帆交流中钵论文的红莉栖原稿与『Amadeus』军用化情况。真帆和教授回国，继续让冈伦担任测试员。
 
 对于“红莉栖”这个时候打来很是在意，于是我对二人解释了一下，接起了电话。  
 “嗯？怎么了？”  
@@ -53,20 +53,20 @@
 “告诉他你今天会先躲到安全的地方就好了。和教授见面的话可能会牵连到他。”  
 对于我的话，比屋定露出微妙的表情点了点头。  
 
-比屋定被伦太郎带到了菲莉丝·喵喵的家，坐落于秋叶原中心的某个高层大厦的最顶层，比起cosplay商店的老式建筑，安全性肯定是上升了几个档次。菲莉丝愉快地招待了二人，并提供了床铺和食物。而桥田至为了和铃羽碰面，一个人回了未来道具研究所。  
+比屋定被冈部带到了菲莉丝·喵喵的家，坐落于秋叶原中心的某个高层大厦的最顶层，比起cosplay商店的老式建筑，安全性肯定是上升了几个档次。菲莉丝愉快地招待了二人，并提供了床铺和食物。而桥田至为了和铃羽碰面，一个人回了未来道具研究所。  
 “这个笔记本电脑，只是存在本身就会招来灾祸，舍弃它可能比较好。”  
-状况稳定下来之后，伦太郎开始讨论起关于处理红莉栖的笔记本电脑和硬盘的问题。他的意见十分坚定。虽然平常的他都是那种会呆在某处，不愿太过强调自身主张的类型。但是对于这件事他却显得十分顽固。但是，比屋定也是一样的顽固。  
+状况稳定下来之后，冈部开始讨论起关于处理红莉栖的笔记本电脑和硬盘的问题。他的意见十分坚定。虽然平常的他都是那种会呆在某处，不愿太过强调自身主张的类型。但是对于这件事他却显得十分顽固。但是，比屋定也是一样的顽固。  
 “我想至少应该解锁之后确认下里面的内容吧。虽说以现况看来这个还做不到……”  
 “现在不是说这种悠闲的话的时候。应该立即舍弃掉，最好是直接在这里破坏掉——”  
 “居然说要破坏掉……这可是红莉栖的遗物啊！”  
 “我还以为你是更有逻辑性的人。”  
 “我也以为你不是那么冷漠的人。”  
 “……”  
-对于比屋定的话，伦太郎楞了一下，刹那间露出了可怕的表情。  
+对于比屋定的话，冈部楞了一下，刹那间露出了可怕的表情。  
 ——这个人，到底在隐瞒着什么啊？比屋定在心里想着。能轻易猜到的部分是，这应该是和红莉栖有关的事。所以，她决定借着这个机会，把中午匆忙间没能问的问题毫不客气地质问出来。  
 “我感觉，关于红莉栖事件，你可能隐瞒着什么——”  
 “……我知道的都是些无关紧要的事。”  
-比屋定感觉伦太郎无论如何都想回避这个话题。中午在那个工作室的时候，如果没有那件事的介入的话，他应该已经说出来了吧。  
+比屋定感觉冈部无论如何都想回避这个话题。中午在那个工作室的时候，如果没有那件事的介入的话，他应该已经说出来了吧。  
 “比起这些，现在最重要的是这台笔记本电脑应该怎么处理。  
 &emsp;&emsp; 这已经不是什么‘朋友的遗物’这种级别的问题了，  
 &emsp;&emsp; 而是会引起国家规模的争夺战的东西。”  
@@ -79,7 +79,7 @@
 &emsp;&emsp; 之前在酒店的停车场被袭击的事，说不定也有什么关联。  
 &emsp;&emsp; 平常绝对碰不到的事，一个接一个地发生，这绝非偶然。”  
 “就算这样，国家规模什么的……”  
-对于比屋定来说，她还处于云里雾里的状态。给所有事情强加上关联性，就会让人容易掉入阴谋论者的圈套。但事实是，世界上发生的很多事，并没有那么复杂的原因。刚想这样反驳，伦太郎又继续说了更多让比屋定震惊的话。  
+对于比屋定来说，她还处于云里雾里的状态。给所有事情强加上关联性，就会让人容易掉入阴谋论者的圈套。但事实是，世界上发生的很多事，并没有那么复杂的原因。刚想这样反驳，冈部又继续说了更多让比屋定震惊的话。  
 “事态在此之后将会像约翰·提托预言的那样发展吧。”  
 “约翰·提托？”  
 那个名字，比屋定并不知道。  
@@ -99,7 +99,7 @@
 “红莉栖留下的笔记本电脑和移动硬盘，那之中实际存着什么，已经不重要了。  
 &emsp;&emsp; 只要那东西有可能在就会有组织想要得到。”  
 “等，等下……让我稍微整理下思路……”  
-伦太郎的话是否属实，稍微冷静一下，想想看吧。通常情况下，肯定会把这种东西当作奇怪的闲话，连听都不听吧。但是，比屋定最近在这遭遇的事，却并非通常。所以不能明确否定伦太郎的话。确实，比屋定自己也当然有过一点类似阴谋论的想法。  
+冈部的话是否属实，稍微冷静一下，想想看吧。通常情况下，肯定会把这种东西当作奇怪的闲话，连听都不听吧。但是，比屋定最近在这遭遇的事，却并非通常。所以不能明确否定冈部的话。确实，比屋定自己也当然有过一点类似阴谋论的想法。  
 “……其实我也有过，这个电脑被人盯上了的预感。  
 &emsp;&emsp; 只不过，你说的话和我的预测差的太远了……”  
 “你的预测是？”  
@@ -114,14 +114,14 @@
 “对。如果能实现记忆数据的修改并重新写入，就可能制造出‘没有恐惧感的士兵’，  
 &emsp;&emsp; 或者‘不论多么非人道的任务都能轻松执行的部队’这种很可怕的东西。  
 &emsp;&emsp; 我还以为，红莉栖是不是偶然掌握了这些实验的证据。”  
-“啊……那，『Amadeus』的研究中，美军的参与……应该没有吧？”  
+“啊……那，『Amadeus』的研究中，美军的参与……没有的吧？”  
 “这怎么可能呢？”  
 “真的能这么断言吗？你只不过是研究人员，又不是这个项目的总负责人。”  
 “雷斯吉宁教授的话，也不会让军队来参与的吧。”  
 “也是呢……那只是别的世界线的话题……”  
 “世界线？什么东西？”  
 “不，请忘掉吧。可能是我想太多了。”  
-并不是很好的转移话题的说辞。这样的说法，让比屋定心里起了个疙瘩。结果，虽然想再多问一些约翰·提托的事，但伦太郎却不愿意再说了。红莉栖的笔记本电脑和硬盘也无法解除锁定，比屋定即使拿着也没用。而且就像伦太郎说的那样，恐怕还会有袭击者的存在。所以，不得已只能交给他了。是不是要破坏掉，他却没有明确表示。  
+并不是很好的转移话题的说辞。这样的说法，让比屋定心里起了个疙瘩。结果，虽然想再多问一些约翰·提托的事，但冈部却不愿意再说了。红莉栖的笔记本电脑和硬盘也无法解除锁定，比屋定即使拿着也没用。而且就像冈部说的那样，恐怕还会有袭击者的存在。所以，不得已只能交给他了。是不是要破坏掉，他却没有明确表示。  
 
 “*Maho*，你没事真是太好了！”  
 比屋定来到和光市的办公室后，已经到了的雷斯吉宁教授张开双臂，用高大的身体给了她一个大大的拥抱。  
@@ -141,10 +141,10 @@
 “*Hahaha*，*Maho*真是认真啊。”  
 “还有……能够感受这红莉栖度过了最后时光的国家的气氛……真是太好了。”  
 “*Maho*……”  
-只是，还没有弄清楚红莉栖死亡的真相，来日本之后更是多了不少疑团，并且只能这样无可奈何地带着疙瘩回国，真是令人咬牙切齿。如果伦太郎把所有事都说出来的话……  
+只是，还没有弄清楚红莉栖死亡的真相，来日本之后更是多了不少疑团，并且只能这样无可奈何地带着疙瘩回国，真是令人咬牙切齿。如果冈部把所有事都说出来的话……  
 “说起来……『Amadeus』的测试员的事，要怎么办？”  
-想起冈部伦太郎于是就想到了这件事。比屋定和雷斯吉宁教授回国了的话，伦太郎的测试员身份也不得不结束了。  
-“*Hum……*也是呢……”  
+想起冈部于是就想到了这件事。比屋定和雷斯吉宁教授回国了的话，他的测试员身份也不得不结束了。  
+“*Hum……* 也是呢……”  
 教授莫名开始沉思起来，让比屋定有点困惑。还以为是根本不用想的事，难道不对吗？  
 “我想让测试的事就这样继续下去，你觉得怎么样？”  
 “欸？！您认真的吗？”  
@@ -161,9 +161,9 @@
 “是的哟！”  
 “那么之后和*Rintaro*联络的事，就由我直接进行吧。”  
 “没、没意见啊。”  
-虽然感觉是被岔开话题了，但比屋定也因为害羞没能继续追究。只是，雷斯吉宁教授这么中意伦太郎，还是挺意外的。从相遇的那一刻起，教授好像就对这位叫做伦太郎的青年特别有好感。只是单纯欣赏，或者因为他是红莉栖的朋友，还是说别的什么原因？比屋定并不知道。  
+虽然感觉是被岔开话题了，但比屋定也因为害羞没能继续追究。只是，雷斯吉宁教授这么中意冈部，还是挺意外的。从相遇的那一刻起，教授好像就对这位叫做冈部伦太郎的青年特别有好感。只是单纯欣赏，或者因为他是红莉栖的朋友，还是说别的什么原因？比屋定并不知道。  
 
-第二天，比屋定和雷斯吉宁教授按照预定从成田机场回美国了。来送行的伦太郎，在和雷斯吉宁教授谈论到继续测试员一职的事时，显得十分吃惊。  
+第二天，比屋定和雷斯吉宁教授按照预定从成田机场回美国了。来送行的冈部，在和雷斯吉宁教授谈论到继续测试员一职的事时，显得十分吃惊。  
 
 然后，半年的时间过去了。  
 
