--- a/steins_gate_0/docs/0005.md
+++ b/steins_gate_0/docs/0005.md
@@ -68,11 +68,9 @@ ATF上的派对结束以后已经过了几天。
 隔间大概有四个半榻榻米那么大。有一张雪白的桌子，上面摆着一台30英寸左右的一体机电脑，以及配套的鼠标键盘，另外还带有音响与可转动的摄像头。  
 “稍微往后面坐一下。”  
 好像是为了方便参观在电脑上进行的工作，房间后面放着一个小小的沙发。我坐了过去。  
-比屋定真帆将电脑接通电源，开始敲击键盘。不一会画面上就出现了“ *Amadeus System* ”的字样。输入ID的时候看见了，“*Salieri*”。  
+比屋定真帆将电脑接通电源，开始敲击键盘。不一会画面上就出现了“Amadeus System”的字样。输入ID的时候看见了，“Salieri”。  
 萨列里？ *Amadeus* 和 *Salieri* 吗？ 究竟意味着什么呢。  
-话说，在《*Amadeus*》这部著名的电影里，有一位嫉妒、厌恶、憎恨莫扎特的才能，却从心底里醉心于他的登场人物。这位人物，就是萨列里（*Salieri*）。  
-（注：莫扎特全名为 沃尔夫冈·阿马德乌斯·莫扎特，德语 *Wolfgang·Amadeus·Mozart*，1756.1.27－1791.12.5。  
-萨列里全名为 安东尼奥·萨列里，意大利语 *Antonio·Salieri*，1750.8.18－1825.5.7）
+话说，在《Amadeus》这部著名的电影里，有一位嫉妒、厌恶、憎恨<abbr title="沃尔夫冈·阿马德乌斯·莫扎特，德语 Wolfgang·Amadeus·Mozart，1756.1.27－1791.12.5。">莫扎特（Amadeus）</abbr>的才能，却从心底里醉心于他的登场人物。这位人物，就是<abbr title="安东尼奥·萨列里，意大利语 Antonio·Salieri，1750.8.18－1825.5.7">萨列里（Salieri）。</abbr>  
 
 ![](../pics/009.png)
 
