--- a/steins_gate_0/docs/0000.md
+++ b/steins_gate_0/docs/0000.md
@@ -32,7 +32,7 @@
 
 桶子：“喂，冈伦，你这不是浑身是血吗！怎么了？！”  
 铃羽：“爸爸，现在就去拿水和毛巾来！还有衣服！”  
-桶子：“诶诶？什么情况啊说明一下*please*！”  
+桶子：“诶诶？什么情况啊说明一下please！”  
 铃羽：“好了！快去！”  
 桶子：“好，好吧。”  
 桶子慌忙的跑向楼顶门的方向。  
@@ -89,7 +89,7 @@
 真由理：“冈伦他，明明没有期望过这个……  
 &emsp;&emsp; 而且我觉得，就算是再尝试一次，也只会继续让冈伦受伤……  
 &emsp;&emsp; 让一个人来改变未来这种事，肯定是办不到的啊……”  
-铃羽：“所以说，为此才有这***Steins;Gate***（命运石之门）……  
+铃羽：“所以说，为此才有这**Steins;Gate（命运石之门）**……  
 &emsp;&emsp; 你的心情我明白。但是啊，我也是从未来，来到这里的啊。  
 &emsp;&emsp; 不论如何我也回不去2036年了，所以我不会就这么放弃的。”  
 真由理：“……”  
