--- a/steins_gate_0/docs/0002.md
+++ b/steins_gate_0/docs/0002.md
@@ -136,15 +136,19 @@
 最初的问题是这样的：在把模拟化的记忆作为数字信号记录的过程，需要进行采样。而这是不是代表有被舍弃的信息呢？  
 对于用日语提出的疑问，教授很快点头，并立刻用英语开始了回答。或许他能听懂日语吧。  
 真帆（同传）：“你的问题换一种说法，  
-&emsp;&emsp; 是指在将交响乐的现场演奏保存成*wav*格式时，无法将现场演奏的所有要素都完美的记录下来吧。  
-&emsp;&emsp; 确实，我们也有此疑问，这也是我们现在研究中面临的最为困难的一环。  
-&emsp;&emsp; 脑内的网络，只看神经递质的*ON*和*OFF*，也就是说，看做二进制的数据交换的话，  
+&emsp;&emsp; 是指在将交响乐的现场演奏保存成 *.wav* 格式时，  
+&emsp;&emsp; 无法将现场演奏的所有要素都完美的记录下来吧。  
+&emsp;&emsp; 确实，我们也有此疑问，这也是现在的研究中最困难的一环。  
+&emsp;&emsp; 脑内的网络，只看神经递质的ON和OFF，  
+&emsp;&emsp; 也就是说，看做二进制的数据交换的话，  
 &emsp;&emsp; 就是简单的问题了，因为那就跟数字化的数据是一样的。  
-&emsp;&emsp; 但实际上我们知道，神经递质和电信号在大脑中是以模拟信号的方式产生变化的。  
+&emsp;&emsp; 但实际上我们知道，  
+&emsp;&emsp; 神经递质和电信号在大脑中是以模拟信号的方式产生变化的。  
 &emsp;&emsp; 关于这个问题，目前我们只有使用更高的采样率这种解决方案。  
-&emsp;&emsp; 用音乐来比喻的话，比起44.1kHz采样作品，听众更愿意选择48kHz甚至96kHz。  
-&emsp;&emsp; 由此，尽管是数字信号，但是可以得到和模拟信号更为接近的信息。”  
-在听众之间，些许的失望感传播开来——果然只是纸上谈兵，实用化是不可能的吧，之类的。  
+&emsp;&emsp; 用音乐来比喻的话，  
+&emsp;&emsp; 比起44.1kHz采样作品，听众更愿意选择48kHz甚至96kHz。  
+&emsp;&emsp; 由此，尽管是数字信号，也可以得到和模拟信号更为接近的信息。”  
+些许的失望感在听众间传播开来——果然只是纸上谈兵，不可能实用化吧——之类的。  
 
 接下来又有几个人提出了问题。每个人的提问都是对教授的研究持否定的态度，并且表达方式多是让人怀疑是否是挑衅性质的。就连在一旁听着的我都忍不住烦躁起来。这既是雷斯吉宁教授的研究，同时也是和红莉栖相关的研究。这技术的实用性我是最清楚地知道的，所以我无法原谅那些不经大脑就横加否定的人。这些家伙，真的是研究者吗？  
 我压抑着自己的情绪，把目光移回讲台。……难道她也在生气？比屋定真帆明显一脸不高兴的表情，与雷斯吉宁教授对于无礼的提问，承认其中的问题点并柔和地回答的做法形成了鲜明的对比。而她翻译的话语中也能听出些许话中带刺的感觉，这让我对她稍稍有了一些亲近感。  
