--- a/steins_gate_0/docs/0003.md
+++ b/steins_gate_0/docs/0003.md
@@ -35,9 +35,12 @@
 真帆（Amadeus）：“教授，刚才的发言，我能当作性骚扰向大学控诉吗？”  
 雷斯吉宁教授看到这副样子，愉快的反击回去。两人说着流利的英语，半数以上的听众都不能够理解对话的意思。  
 一副没办法的样子，在墙边的比屋定真帆重新握起话筒：  
-“唉，教授呢，那个...对我—不—对依靠我的记忆而运作的这个『Amadeus』，说了‘试试回答些问题吧。’  
-&emsp;&emsp; 那个…我到—那个—什么时候还跟爸爸一起洗澡—什么的……  
-&emsp;&emsp; 初恋是什么时候的……什么都好好回答起来——嗯……”  
+“唉……教授呢，那个……对我——  
+&emsp;&emsp; 不，是对依靠我的记忆而运作的这个『Amadeus』，说——  
+&emsp;&emsp; ‘试试回答些问题吧。  
+&emsp;&emsp; 那个……我…那个…到什么时候还跟爸爸一起洗澡…什么的……  
+&emsp;&emsp; 初恋是什么时候……之类的，都好好回答一下吧！’  
+&emsp;&emsp; 嗯……”  
 真帆（Amadeus）：“啊，已经不用继续翻译了！  
 &emsp;&emsp; 很害羞欸，能消停下吗！这些问题我都不会回答的！”  
 教授接着说了些什么，随后CG的比屋定真帆哼的一下面向一旁。  
@@ -48,32 +51,32 @@
 这不是很了不起的事情吗？和普通的人工智能明显不同，我有这样的感觉。  
 “**不能回答事先输入好的信息**”，并且理由竟然是“**因为害羞**”？  
 是因为这次的展示所用的程序，是被设置成对这种特定的问题会做出相应反应的程序吗？  
-这种徒有其表的程序倒也不是没有可能……但如果这不是事先编辑好的程序的话————  
+这种徒有其表的程序倒也不是没有可能……但如果这不是事先编辑好的程序的话——  
 周围的人也好像开始明白过来，窃窃私语的声音逐渐向着吃惊变化着。  
 真帆（Amadeus）：“喂，我说啊，也该对这个爱恶作剧的小鬼做点什么了吧！  
 &emsp;&emsp; 虽然我知道他想要我表达什么，但总之太害羞了！”  
-比屋定真帆的副本向着本体抗议道。不知为何，我产生了一种双胞胎姐妹在对话的错觉。  
-“嗯，不是恶作剧的小鬼。  
+比屋定真帆的副本向本体抗议着。不知为何，我产生了双胞胎姐妹在对话的错觉。  
+“嗯，也不能说是恶作剧的小鬼。  
 &emsp;&emsp; 雷斯吉宁教授很爱搞怪，所以很难好好说明下去。  
 &emsp;&emsp; 为此就由我来解释。”  
 比屋定真帆从墙边离开，站在了教授旁边。  
 “相信各位已经了解到了。『Amadeus』呢，  
-&emsp;&emsp; 是能**自我判断什么是自己能说的和不能说的**，  
-&emsp;&emsp; 或者**想说的、和不想说的**。  
+&emsp;&emsp; 是能够**自我判断什么是自己能说的和不能说的**，  
+&emsp;&emsp; 或者**想说的和不想说的**。  
 &emsp;&emsp; 而我们没有对『Amadeus』的言行编入过任何程序。  
-&emsp;&emsp; 她，是从我给予的记忆中进行自我判断，自律性的采取了刚才的行动。”  
+&emsp;&emsp; 她，是根据我给予的记忆进行自我判断，自律性地采取了刚才的行动。”  
 接着比屋定真帆的话，画面中的**她**继续说明。  
 真帆（Amadeus）：“然后，这也因此与之前所说的医疗方面的应用有所冲突。  
 &emsp;&emsp; 在我们研究所中也颇有分歧……  
 &emsp;&emsp; 我，会在不知不觉中忘却无用的情报。  
 &emsp;&emsp; 不如说，是**无法从记忆中取出**了。和大家一样。  
-&emsp;&emsp; 比如，一周前穿的睡衣的颜色，明明应该知道的，但我却无法回忆起来。  
+&emsp;&emsp; 比如，一周前穿的睡衣颜色，明明应该知道，我却无法回忆起来。  
 &emsp;&emsp; 因为这类情报，是与生存无关的，这点也与大家一样。  
 &emsp;&emsp; 就像这样，『Amadeus』的记忆的输入输出与人类非常相近。”  
-“这对我们来说也是令人惊讶的结果，还处于反复研究的中途，详细内容还未能分析出来。”  
+“对于这个结果我们也十分惊讶，还处于反复研究的中途，未能分析出详细内容。”  
 比屋定真帆总结道。  
 雷斯吉宁教授终于把话筒拿到嘴边，一边让比屋定真帆翻译，一边继续着话题。  
-真帆（同传）：“还有，让我们吃惊的是，『Amadeus』会有意识的采取说谎的行为。  
+真帆（同传）：“还有，让我们吃惊的是，『Amadeus』会有意识地采取说谎行为。  
 &emsp;&emsp; 这并不是某种原因的问题跟疏忽，是她故意为之的。  
 &emsp;&emsp; 说谎，也是人类在与他人进行沟通时所采取的一种手法。  
 &emsp;&emsp; 『Amadeus』也是，会对输入的记忆进行自律性的探讨。  
