--- a/steins_gate_0/docs/0004.md
+++ b/steins_gate_0/docs/0004.md
@@ -126,26 +126,25 @@
 但是，我不知道比屋定真帆为什么哭，所以也没办法找借口，因此变得更加慌张。  
 “嗯，那个…总而言之是……”  
 “是红莉栖。跟他聊了些红莉栖的话题，然后浮现了种种的回忆……”  
-“*Kurisu*？你是*Kurisu*的朋友？”  
-“那个……是这样的。”  
+“*Kurisu* ？你是 *Kurisu* 的朋友？”  
+“那个……是的。”  
 雷斯吉宁教授用英语的发音念出来的红莉栖的名字听起来有些微妙。  
-“冈部伦太郎（*Okabe Rintaro*）先生。是个学生。”  
+“这位是冈部伦太郎（*Okabe Rintaro*）先生。是个学生。”  
 比屋定真帆向教授介绍了我。  
-雷斯吉宁教授一副温和的表情，给了我一个拥抱。像被巨人抱起一样，要窒息的感觉。  
-这是为了表示对红莉栖的哀悼，我有这样的感觉。  
-“是这样啊。这样的话那就……*Maho*啊，让*Mr. Okabe*跟**她**见面怎么样?”  
+雷斯吉宁教授一脸温和地给了我一个拥抱。像是被巨人抱住，快要窒息了。这是为了表示对红莉栖的哀悼，我有这样的感觉。  
+“这样的话那就…… *Maho*，让 *Mr. Okabe* 跟**她**见面怎么样？”  
 比屋定真帆愣了一下，然后吃惊的跟教授确认道：  
 “嗯？……难道是，『Amadeus』？”  
-“能够得以在这里跟他相见也是有缘，难道不去珍惜这份来之不易的幸运吗？  
-&emsp;&emsp; 在日本的这段时间，让他来担任测试员也是可以的哦。”  
+“能够在这里跟他相见也是有缘，难道不去珍惜这份来之不易的幸运吗？  
+&emsp;&emsp; 在日本的这段时间，让他来担任测试员也是可以的。”  
 “认真的吗？明明是外人突然就这么……”  
-“是*Kurisu*的朋友的话，就不是什么外人了。是这样吧？”  
+“是 *Kurisu* 的朋友的话，就不是什么外人了。是这样吧？”  
 “可是……”  
 他们究竟在说些什么？我不明白。但这是好不容易到来的和雷斯吉宁教授产生联系的机会，我不想轻易放弃。  
 “请一定，让我来帮忙。”  
-“*Nice*！”  
+*“Nice!”*  
 教授拍了拍我的肩膀，满意地笑着，像是小孩子一样，天真的笑脸。  
-“那么详细的内容就让*Maho*告诉你。请多关照。”  
+“那么详细的内容就让 *Maho* 告诉你。请多关照。”  
 教授被其他研究者叫走了。而比屋定真帆像是表达不可思议一样，摇了摇头。  
 
 “跟『Amadeus』见面，还有测试员什么的，到底是在说什么东西啊？”  
