--- a/steins_gate_0/docs/0007.md
+++ b/steins_gate_0/docs/0007.md
@@ -8,10 +8,10 @@
 “冈部先生~真由理酱~”  
 已经汇合在等着我们的菲利斯跟琉华子，见到我们以后马上跑了过来。  
 “真想见你啊喵~！”  
-毫不犹豫的抱紧我的，是菲利斯·喵喵。虽然我知道这是所谓的“女仆小姐”模式用名，本名是秋叶留未穗，但是她本人却一直强调说私下里也要叫她菲利斯。明明实际身份是堪称秋叶原地主的秋叶家的大小姐，却在自家的女仆咖啡厅*MayQueen+Nyan2*开心地当着金牌女仆。今天身上也是如同以前一样，穿着她工作时穿的女仆装。*MayQueen*里到时候是不是也会换上圣诞老人的服装呢？  
+毫不犹豫地抱紧我的，是菲利斯·喵喵。虽然我知道这是所谓的“女仆小姐”模式用名，本名秋叶留未穗的她本人却一直强调说私下里也要叫她菲利斯。明明实际身份是堪称秋叶原地主的秋叶家的大小姐，却在自家的女仆咖啡厅 *MayQueen+Nyan²* 开心地作为金牌女仆工作着。今天身上也是和以前一样，穿着店里的女仆装。*MayQueen* 里到时候是不是也会换上圣诞服装呢？  
 “别，别这样啦……大家都看着呢。”  
 想把菲利斯从身上支开，但是却很难做到。干脆把头上的那个猫耳抢过来算了。  
-“有什么不好的喵！毕竟是凶真和菲利斯的关系嘛~”  
+“有什么不好的喵！毕竟是凶真和菲利斯的关系喵~”  
 “才不好呢。还有啊，凶真什么的别那么叫了。”  
 “为什喵？”  
 “因为那个名字是黑历史。”  
