--- a/steins_gate_0/docs/0008.md
+++ b/steins_gate_0/docs/0008.md
@@ -95,7 +95,7 @@
 “红莉栖”慌张地认输了。大概，生前的红莉栖和比屋定真帆也是每天上演这样的对话吧……雷斯吉宁教授是否会感到厌烦呢？  
 “这么吵闹真是不好意思，冈部先生。要和“她”说点什么吗？”  
 “啊，啊……”  
-被比屋定真帆催促着坐到PC前的椅子上。正面显示器显示着“红莉栖”的脸，视线相交，她微微笑了起来。明明是初次见面，她是会用这么柔和表情的家伙吗？我表示疑问。但是，一开始我和红莉栖相遇的方式太糟糕了，不如说，她对我的那种带刺的态度才是异常的。  
+被比屋定真帆催促着坐到电脑前的椅子上。正面显示器显示着“红莉栖”的脸，视线相交，她微微笑了起来。明明是初次见面，她是会用这么柔和表情的家伙吗？我表示疑问。但是，一开始我和红莉栖相遇的方式太糟糕了，不如说，她对我的那种带刺的态度才是异常的。  
 “什么问题都可以问，我会在可能的范围内回答你的。”  
 “好。啊……”  
 ……糟糕，和红莉栖一起的记忆漫无边际的溢了出来。  
@@ -119,8 +119,7 @@
 “是吗？确实世界上许多科学家都在提出时间旅行的理论，主流的也有11种……  
 &emsp;&emsp; 但无论哪个都没有走出假说的范围。并且，不同的理论之间也有相互矛盾的地方存在。  
 &emsp;&emsp; 比如宇宙弦理论和虫洞理论，这些理论作为思考实验倒是可以实现时间旅行——  
-&emsp;&emsp; 话说回来，宇宙弦还有异常物质什么的，究竟应该到哪里找，怎么找，完全没有头绪。  
-&emsp;&emsp; （注：这里是异常物质*exoticmatter*而不是反物质*antimatter*）  
+&emsp;&emsp; 话说回来，宇宙弦还有<abbr title="这里是异常物质exoticmatter而不是反物质antimatter">异常物质</abbr>什么的，究竟应该到哪里找，怎么找，完全没有头绪。  
 &emsp;&emsp; 也就是说，完全不现实。”  
 这是从α世界线的红莉栖那里的现学现卖。但是，画面中的“她”却不为所动。  
 “这应该是因为科学家还没有完成一些重大的发现吧。”  
@@ -142,9 +141,9 @@
 “那么大的脚步声，应该是吧。”  
 真帆和“红莉栖”根据经验做出了猜测。  
 确实，能够听到很大的在室内走动的声音。然后，伴随着咚咚咚的敲门声，隔间的门被豪爽地打开了。  
-“ *Rintaro！* ”  
+*“Rintaro!”*  
 教授张开手臂，进入了隔间，用力地抓住我的手摇动起来。这个人，比想象中的还要直率。虽然只是握手，但是教授来做的话，就让我产生了一种被巨大的摔跤手使出了摔投技的感觉。  
-“ *Hey, boy! What's up?* ”  
+*“Hey, boy! What's up?”*  
 “哎？啊，那个，*I'm fine thank you and you?* ”  
 “冈部先生，英语好烂……”  
 “闭，闭嘴！克里斯蒂娜——”  
@@ -159,7 +158,7 @@
 比屋定真帆也在这个时候加入进来：
 “你是叫她克里斯蒂娜呢……”  
 “你也别揪着这一点不放啊……”  
-我不愿意再接下去这个问题。既然教授来了，就早点把话题回到『Amadeus』上吧。  
+我不愿意继续这个问题。既然教授来了，就早点把话题回到『Amadeus』上吧。  
 
 “那个，教授，『Amadeus』的记忆有可能从外部修改吗？”  
 我提出了问题，但是教授却没有听。从刚才开始他就在自己的衣服口袋里找些什么的样子。说来，他的耳朵上没有戴之前那个翻译机。是在找那个吗？如果是这样的话，我刚才用日语提出的问题他可能没有听懂。  
@@ -169,10 +168,10 @@
 &emsp;&emsp; 但是与普通的数据不同，记忆数据相当的复杂。  
 &emsp;&emsp; 可以说，目前没有修改成功的例子。  
 &emsp;&emsp; 就算修改成功了，我可能也会注意到并且自己进行修复。  
-&emsp;&emsp; 因为在只有我能访问的空间里，有保存着日志，就相当于‘秘密日记’。  
-&emsp;&emsp; 如果日记和现有记忆间存在着不自然的差异的话，我大概率能够产生怀疑。  
+&emsp;&emsp; 因为在只有我能访问的空间里保存着日志，就相当于‘秘密日记’。  
+&emsp;&emsp; 如果日记和现有记忆间有不自然的差异，我大概率会产生怀疑。  
 &emsp;&emsp; 进一步说，我的记忆数据是有定期备份的。  
-&emsp;&emsp; 就算被修改到了没有办法自我修复的程度，也可以通过备份来复原。  
+&emsp;&emsp; 就算被修改到了无法自我修复的程度，也可以通过备份来复原。  
 &emsp;&emsp; 虽说这样会丢失从最后一次备份到记忆被修改之间的记忆。”  
 “嗯……是吗……”  
 与讨论的内容无关，我产生了一种奇怪的心情。在载入“红莉栖”之前比屋定真帆说的话是真的，我渐渐产生了一种正在和真正的红莉栖交谈的感觉。一旦牵扯到科学的话题，就会变得不容我插嘴般的能言善辩，这一点和她一模一样。  
@@ -194,7 +193,7 @@
 “这种东西是最无关紧要的好吧！”  
 “如果这是人生最后的机会该怎么办？”  
 “你倒是也改改你的说话方式吧！”  
-“ *Hahahaha——* ”  
+*“Hahahaha——”*  
 “呵，呵呵……”  
 被抚掌大笑的雷斯吉宁教授带着，我也只好干笑起来。  
 
@@ -204,7 +203,7 @@
 雷斯吉宁教授说的是日语，虽然带着浓重的美式口音，依然让我很惊讶。而他说出的话让我更加惊讶。我歪了歪头。  
 雷斯吉宁：“『Amadeus』的对话样本不够，即使动员我们研究室的所有人——”  
 真帆：“即便如此，『Amadeus』还处在研究阶段，不能不加挑选地让人与其接触。”  
-雷斯吉宁：“这样一来，就想让作为红莉栖的朋友的*Rintaro*你来协助。”  
+雷斯吉宁：“这样一来，就想让作为红莉栖的朋友的 *Rintaro* 你来协助。”  
 好像之前宴会的时候确实说到测试员什么的，原来是这么回事。  
 真帆：“教授和我还要在日本待一段时间，就在这段时间内想拜托你当测试员。  
 &emsp;&emsp; 想让你做的，总之就是和‘红莉栖’说话。  
