--- a/steins_gate_0/docs/0009.md
+++ b/steins_gate_0/docs/0009.md
@@ -24,9 +24,10 @@
 &emsp;&emsp; 没想到竟然会被拒接八次！  
 &emsp;&emsp; ……  
 &emsp;&emsp; 为什么不说话了？”  
-在这么人流密集的地方，和手机上显示出的女孩子说话什么的……实在是，太羞耻了。  
+在这种人流密集的地方，和手机上显示的女孩子说话什么的……实在是，太羞耻了。  
 “嘛，如果你不想和我说话的话倒也没关系。  
-&emsp;&emsp; （小声）什么嘛，明明想着能有更多说话的机会的，笨蛋一样，真是的。  
+&emsp;&emsp; （小声）什么嘛！明明以为能有更多说话机会的。  
+&emsp;&emsp; （小声）像个笨蛋似的，真是的——  
 &emsp;&emsp; 咳咳，不管怎么说，在测试过程中我和你一直是联系在一起的。  
 &emsp;&emsp; 等你心情好的时候就联络我吧。  
 &emsp;&emsp; 我也是很忙的，也不是什么时候都可以接你电话的。  
