--- a/steins_gate_0/docs/0010.md
+++ b/steins_gate_0/docs/0010.md
@@ -85,11 +85,11 @@
 含糊不清的措辞，让真帆感到了违和感，于是就不再进一步深究。  
 “总而言之路上小心，我会期待着你的礼物啦~”  
 “什么礼物比较好？”  
-“嗯……难得你去一趟秋叶原，要是有什么稀奇的东西就好了——你对秋叶原挺熟悉的吧？”  
+“嗯……难得你去一趟秋叶原，要是有什么稀奇的就好了——你对秋叶原挺熟的吧？”  
 “欸？为什么？”  
 “在休息时间里，你不是经常看那种网页吗？”  
 “什……么？！难道是『Amadeus』告诉你的？”  
-“那孩子才不会这么做。你有时明明坐在我后面，却没注意到自己已经沉迷到视频里了哦。”  
+“那孩子才不会这么做。有时你明明坐在我后面，却无意识地沉到视频里了。”  
 “啊呜！没想到竟然会暴露，真恨大意的自己……”  
 非常罕见地，红莉栖抱着头。看她这样子，真帆从心底里感到惊讶。  
 “学姐，拜托！一定要向其他人保密！”  
@@ -121,7 +121,7 @@
 “喜欢吗？”  
 “你啊！”  
 真帆忍不住站了起来，靠向电脑屏幕。但是“红莉栖”却一脸清爽。  
-“也没必要掩饰嘛。昨天毕竟是在他本人面前所以没有办法。现在只有我们两个人哦~”  
+“没必要掩饰嘛。昨天毕竟是在他本人面前所以没有办法。现在只有我们两个人哦~”  
 话说红莉栖看起来很死板，但却意外地喜欢这种八卦，不如说是闺蜜间的私房话。真帆叹了口气，坐回椅子上。在只有她们的办公室里，椅子的摩擦声响了起来。  
 “真的没有那种感情。就连冈部先生是个怎样的人，也还没有完全明白。”  
 “原来如此。嘛，也是呢。”  
