--- a/steins_gate_0/docs/0011.md
+++ b/steins_gate_0/docs/0011.md
@@ -142,7 +142,7 @@
 真由理：“嗯”  
 吹雪：“等等！你到底在说什么啊，真由喜！那个桥田可是Hentai绅士哟！”  
 枫：“由季可是会遭毒手的……”  
-被吹雪和枫共同下达糟糕评价的，名叫桥田至（*Hashida Itaru*）的男人，是冈伦的高中好友兼大学同学，和真由理三人为LAB最初期的成员。由于体型的缘故，所以昵称是取和名字的“桶子（*Taru*）”。那个人是个重度的御宅族，二次元和三次元皆可的混合体。而且，就像吹雪所说，是个Hentai绅士。总是不管羞耻和名声一直说着些Hentai一样的话，但如果这样骂他的话，他就会反驳道“不对哟，是Hentai绅士哟！”
+被吹雪和枫共同下达糟糕评价的男人，名叫桥田至（*Hashida Itaru*），是冈伦的高中好友兼大学同学，和真由理三人为LAB最初期的成员。由于体型的缘故，所以昵称是取和名字相近的“桶子（*Taru*）”。是个重度的御宅族，二次元和三次元皆可的混合体。而且，就像吹雪所说，是个Hentai绅士。总是不顾羞耻和名声说些Hentai一样的话，但如果这样骂他的话，他就会反驳道“不对哟，是Hentai绅士哟！”
 
 ![](../pics/023.png)
 
