--- a/steins_gate_0/docs/0012.md
+++ b/steins_gate_0/docs/0012.md
@@ -173,8 +173,8 @@
 “神……神马？”  
 在桶子这么动摇着的时候，铃羽也跟着叹了一口气。  
 “不过，我想生活上还是改一改的比较好。  
-&emsp;&emsp; 房间的打扫，可以的话还是每天都做比较好哟。这里看起来灰尘格外多。  
-&emsp;&emsp; 不只是那些，饮食上也要格外注意。今天也是只吃了杯面是吧？”  
+&emsp;&emsp; 可以的话还是每天都打扫房间比较好哟，这里看起来灰尘格外多。  
+&emsp;&emsp; 除此之外，饮食上也要格外注意。今天也是只吃了杯面是吧？”  
 “为，为什么会知道！？”  
 “厨房那边，吃完的就放在那了。”  
 “原来如此。”  
@@ -183,8 +183,8 @@
 “姑且可不行。老是吃那么多的方便面跟零食的话会生病的哟。  
 &emsp;&emsp; 还有，尽量的也要运动运动”。  
 ……  
-刚才铃羽说到要注意的那些地方，阿万音由季也一样的说到了。果然是母女啊……  
-这时，正在稍微有点想家的铃羽，注意到了新的来访者的气息。  
+刚才铃羽说要注意的那些地方，阿万音由季也一样不差地说到了。果然是母女啊……  
+这时，正在稍微怀念着家的感觉的铃羽，注意到了新的来访者的气息。  
 
 “嘟嘟噜~”  
 玄关的门打开后，房间里响起了早已听惯的问候。  
