--- a/steins_gate_0/docs/0015.md
+++ b/steins_gate_0/docs/0015.md
@@ -106,14 +106,15 @@
 “欸？无法想象啊。”  
 “……”  
 “……”  
-对话到这里又中断了。其实，我们之间不得不说的问题堆积如山。所以，正因如此，我什么都无法说出口。说不定，对铃羽来说也是这样。没有其他的事可做，我和铃羽都自然地看向了电视机的画面。主持人正播报着的新闻，是有关东京银座，法国时尚名牌“*Le Paradis*”的开业活动。在主持人说明的同时，100名以上的女性顾客从早晨排队至今的样子被播放了出来。  
+对话到这里又中断了。其实，我们之间不得不说的问题堆积如山。所以，正因如此，我什么都无法说出口。说不定，对铃羽来说也是这样。没有其他的事可做，我和铃羽都自然地看向了电视机的画面。主持人正播报着的新闻，是有关东京银座，法国时尚名牌 *Le Paradis* 的开业活动。在主持人说明的同时，100名以上的女性顾客从早晨排队至今的样子被播放了出来。  
 “真是和平啊——在我懂事的时候，这些情景已经不存在了。”  
 铃羽看着电视画面中，小巧漂亮的女性们笑着回答采访。  
 “好羡慕啊……她们不用去杀任何人，也不会突然被谁杀害吧。  
 &emsp;&emsp; 我成长的时代中，对方无论是男是女都必须毫不留情地杀掉。  
-&emsp;&emsp; 下一瞬间说不定自己的生命就会终结——这样的恐惧无论睡着还是醒着都伴随左右。  
-&emsp;&emsp; 为了忘却恐惧，除了委身于疯狂，让自己处于杀人一方以外，别无他法。”  
-那就是所谓的战争，也是对铃羽来说曾经的日常生活。经历过数条噩梦般世界线的我，也不曾体验过那样的世界。  
+&emsp;&emsp; 下一个瞬间说不定自己的生命就会终结——  
+&emsp;&emsp; 这样的恐惧无论睡着还是醒着都伴随左右。  
+&emsp;&emsp; 为了忘却恐惧，除了委身于疯狂，让自己成为杀人方，别无他法。”  
+那就是所谓的战争，也是对铃羽来说曾经的日常生活。经历过数条噩梦般的世界线的我也不曾体验过那样的世界。  
 “父亲他们因为时间机器的事被归为反政府组织。”  
 铃羽回来所乘坐的时间机器是由桶子开发的，其性能相比α世界线的更是高出许多。  
 真不知道这边未来的他是怎么办到的。  
@@ -123,7 +124,7 @@
 &emsp;&emsp; 我杀了很多人，朋友和同伴也有很多被杀掉了。  
 &emsp;&emsp; 在那之中就有我的母亲。  
 &emsp;&emsp; 为了从军队的无人机下保护我，被机枪扫射而死了……”  
-用PC看着Nico直播的桶子，后背轻微地动了一下。一边装作在看显示器的样子，一边仔细听着铃羽的话吧。谈及阿万音氏的临终，这还是第一次。现在就在一旁开心地淋浴着的她，最终是以那样悲惨的死亡而结束了吗……  
+用电脑看着Nico直播的桶子，后背轻微地动了一下。一边装作在看显示器的样子，一边仔细听着铃羽的话吧。谈及阿万音氏的临终，这还是第一次。现在就在一旁开心地淋浴着的她，最终是以那样悲惨的死亡而结束了吗……  
 “这双眼睛看到过支离破碎的母亲，这副身体沐浴过母亲热腾腾的鲜血……”  
 也许，铃羽不想与这个2010年的母亲见面，是因为不想让现在的阿万音由季得知未来的事情也说不定。不可能说得出口吧，那样的未来……  
 “呐，冈伦叔叔——”  
