--- a/steins_gate_0/docs/0013.md
+++ b/steins_gate_0/docs/0013.md
@@ -78,7 +78,7 @@
 &emsp;&emsp; 还有，记得告诉冈伦！*Steins;Gate* 一定存在！”  
 “‘绝对不能放弃啊你个混蛋！’这样告诉他！”  
 “*Okey-dokey！*”  
-接着，舱门彻底封闭，外面混乱的声音，还有真由理与父亲最后的叮咛，都消失了。  
+接着，舱门彻底封闭。外面的混乱，还有真由姐与父亲最后的叮咛，都消失了。  
 “爸爸，最喜欢你了。”  
 铃羽对着已经关闭的舱门小声说着。  
 “要去了哦，篝……向着过去。”  
