--- a/steins_gate_0/docs/0016.md
+++ b/steins_gate_0/docs/0016.md
@@ -76,7 +76,7 @@
 秋叶留未穗——也就是自称菲利斯，作为父亲的友人，一直到2036年都在向他提供各种各样的支援，所以铃羽从小就和她熟识，一直称她为“留未姐”。当然，这个时代的她似乎无论如何都想要别人叫她“菲利斯”。然而即使询问她理由，也只会像刚才那样，说些“菲利斯就是菲利斯喵！”之类的莫名回答，令铃羽很困扰。  
 “看到LAB没人，就在想是不是在这里，看起来是正解喵！  
 &emsp;&emsp; 给，慰问品。虽说只是店里卖剩下的东西有点对不住喵。”  
-菲利斯把一个印有*MayQueen+Nyan2*的logo的蛋糕盒拿给铃羽。  
+菲利斯把一个印有 *MayQueen+Nyan²* 的logo的蛋糕盒拿给铃羽。  
 “爸爸不在LAB真是太好了……”  
 要是在这种时间给他吃这种东西，又要更胖了。  
 “不是桶子喵，而是给铃喵的慰问品喵！”  
@@ -87,7 +87,7 @@
 “苹果挞加上蒙布朗，还有，草莓的水果蛋糕喵~”  
 “唔……”  
 “看~呦~很好吃的哟~”  
-菲利斯故意掀开盖子，拿给铃羽看。香甜的奶油与水果的味道顷刻间环绕她的脸庞。  
+菲利斯故意掀开盖子凑到铃羽脸旁。香甜的奶油与水果的味道顷刻间环绕了她。  
 “来，现在就开动也可以喵~别客气开动就好喵~”  
 “咕……”  
 “来来来，啊——张开那可爱的小嘴让菲利斯喂你喵~”  
@@ -104,7 +104,7 @@
 “嗯。这一层——不如说是楼顶，已经被菲利斯整个借走了，别担心喵。  
 &emsp;&emsp; 对老板说了是在研究体感游戏喵，虽然这解释有点牵强。”  
 “帮大忙了。”  
-“别在意！为了将世界四精灵从*Byakhee*手中救出来，菲利斯无论如何都会出手相助的！”  
+“别在意！为了将世界四精灵从 *Byakhee* 手中救出来，菲利斯无论如何都会出手相助的！”  
 “是，是吗……  
 &emsp;&emsp; 从以前开始——不，以现在来说是未来吗——我就觉得，  
 &emsp;&emsp; 留未姐说的话有时候非常难懂啊……究竟是什么语言？”  
@@ -159,10 +159,10 @@
 “虽然是这样喵……”  
 “我绝对会守护好时间机器的！因为必须带着冈伦叔叔走向命运石之门的入口。  
 &emsp;&emsp; 因为那是与未来的父亲，以及所有把我送到这里来的人们的约定……  
-“铃喵……知道了。相对的，只有桶子喵必须全部告诉他。”  
-*Okey-dokey！*  
+“铃喵……我知道了。相对的，只有桶子喵必须全部告诉他。”  
+“*Okey-dokey……*”  
 
-最后像是自言自语一样，铃羽的话语也融于秋叶原的冬季天空中。  
+铃羽最后的像是自言自语一样的话语融于秋叶原的冬季天空中。  
 
 
 <br/>
