--- a/steins_gate_0/docs/0017.md
+++ b/steins_gate_0/docs/0017.md
@@ -13,34 +13,34 @@
 “那个时候不也是一直穿着白大褂吗？”  
 “那是因为忘记换了！”  
 “哈哈哈，是啊。”  
-雷斯吉宁教授最近经常性地把翻译机佩戴在身上。此外还要求真帆用日语来进行对话。  
-“那么，*Kurisu*与*Rintaro*已经建立了怎样的关系了呢？真期待会面啊。”  
+雷斯吉宁教授最近经常把翻译机佩戴在身上，此外还要求真帆用日语来进行对话。  
+“那么，*Kurisu* 与 *Rintaro* 已经建立了怎样的关系了呢？真期待会面啊。”  
 雷斯吉宁教授与真帆预定现在出发去东京市中心，在那里与冈部伦太郎见面。拜托他做『Amadeus』的测试员已经过去两周了，这将会是他的第一次报告。真帆烦躁的原因当然就是这个了。和冈部先生见面……不对，是与“红莉栖”久别重逢这件事让真帆感到紧张。当然，真帆愿意的话可以24小时随时和“红莉栖”对话。但是成为测试员以来，她就尽量不主动与“红莉栖”进行接触，不想因为自己与其对话而给“红莉栖”增添无谓的噪音。  
 “教授，在出发之前能请问一个问题吗？”  
 “尽管问。”  
 “为什么是冈部先生呢？”  
 真帆一直都想问这个问题，只有现在这个时机最合适。  
 对于这个问题，雷斯吉宁教授认真地思考着。  
-“在嫉妒吗，*Maho*？”  
+“在嫉妒吗，*Maho* ？”  
 “那，那是……”  
 突然，真帆感觉到自己的脸变得通红。也就是说，被说中了。是的，这是对冈部伦太郎的嫉妒，虽然不想承认。  
 “说真的，我还是不能接受。‘红莉栖’的通话对象，应当也有其他适合的人选。”  
 “比如说你吗？”  
 “不是这个意思，我与红莉栖也好，与『Amadeus』也好，都太接近了。”  
-“*Rintaro*是个好青年。”  
+“*Rintaro* 是个好青年。”  
 “真这么认为的话，教授真是个老好人。  
 &emsp;&emsp; 人的本质只通过一次接触而理解这种事是不可能的。  
 &emsp;&emsp; 如果他瞒着我们将『Amadeus』卖给其他的研究员怎么办？  
 &emsp;&emsp; 即使最初没有这个想法，也有可能被金钱动摇意志，这就是人类。”  
-“假设*Rintaro*把『Amadeus』卖掉的话，然后会怎么样呢？  
-&emsp;&emsp; 获得登录权限的某人，能够因为与‘*Kurisu*’成为朋友而就这样夺取『Amadeus』吗？”  
+“假设 *Rintaro* 把『Amadeus』卖掉的话，然后会怎么样呢？  
+&emsp;&emsp; 获得登录权限的某人，能够因为与 *‘Kurisu’* 成为朋友而夺取『Amadeus』吗？”  
 “那个……没可能的。”  
 虽然是真帆自己提出的，但是她迅速察觉到其中的可能性无限趋近于零。  
 “是的，不可能的。至于原因……  
-&emsp;&emsp; 真的变成那样的话，‘*Kurisu*’方面会拒绝对话的。  
+&emsp;&emsp; 真的变成那样的话，*‘Kurisu’* 方面会拒绝对话的。  
 &emsp;&emsp; 从这方面来讲这是个非常麻烦的系统，不能如我们所想地运行。  
 &emsp;&emsp; 当然『Amadeus』也有被说服的可能性。  
-&emsp;&emsp; 我将*Kurisu*与*Maho*选作样本人格，可以说这也是原因之一。”  
+&emsp;&emsp; 我选 *Kurisu* 与 *Maho* 为样本人格，可以说也有这个原因。”  
 “我也好红莉栖也好，都很难伺候呢，不会就这么简单地被说服。”  
 明知道是被戏弄，真帆反而故意自己说了出来。  
 “正是，你们真的是毫不留情。这才是最强的安保系统！”  
@@ -50,10 +50,11 @@
 “不管怎么说，对『Amadeus』硬来是不行的。正因如此，也反而很有意思。  
 &emsp;&emsp; 这样的‘她们’只是被自己人独占着也不会有进步的吧。  
 &emsp;&emsp; 我正想着，为了让『Amadeus』完成戏剧性地进化需要起爆器。  
-&emsp;&emsp; 并且，尽量交给与研究无关的人物。  
-&emsp;&emsp; *Rintaro*很聪明，我认为他很合适。同时也是*Kurisu*的朋友……  
+&emsp;&emsp; 并且，尽量交给与研究无关的人。  
+&emsp;&emsp; *Rintaro* 很聪明，我认为他很合适。  
+&emsp;&emsp; 同时他也是 *Kurisu* 的朋友……  
 &emsp;&emsp; 总之，根据今天的报告再做判断不也可以吗？  
-&emsp;&emsp; 弄清楚‘*Kurisu*’与*Rintaro*接触后发生了什么变化，  
+&emsp;&emsp; 弄清楚 *‘Kurisu’* 与 *Rintaro* 接触后发生了什么变化，  
 &emsp;&emsp; 能窥探到我们不曾见过的意外的一面也说不定哦。”  
 真帆无法反驳教授的话。不过也正因为如此，真帆才无法镇定的。“红莉栖”变成了自己所不知道的“红莉栖”，因此会觉得有些寂寞。  
 “时间差不多了，出发吧。”  
@@ -66,22 +67,22 @@
 “我有话要说。”  
 “今天，有之后跟教授和学姐见面的预定吧？是关于这件事吗？”  
 “是的。”  
-“没必要紧张的吧？我认为基本上只要上交记录，然后适当地表述你对我的印象之类的……”  
-“就是这个！记录，就是想问这个。难道说至今为止的所有对话全部都被记录了吗？”  
+“没必要紧张吧？我认为基本上只要上交记录，然后适当表述对我的印象之类的……”  
+“就是这个！记录，就是想问这个。难道说至今为止的所有对话全都被记录了吗？”  
 “一开始就说了吧？我在只有我可以访问的领域中保存着记录。没仔细听吗？”  
 “这次就要把那个提交给教授他们吗？”  
 “大概是的。”  
-“也就是说，关于个人隐私的事只要对你说过，雷斯吉宁教授他们也都一目了然了吗？”  
+“就是说，有关个人隐私的事只要对你说过，雷斯吉宁教授他们也都一目了然吗？”  
 “你啊……现在才发现？”  
 的确是到现在才发现。我与“红莉栖”已经不停地对话接近两周的时间了。而这件事，应该在借用『Amadeus』登录权的时候就已经说过的。  
 “那个……我至今为止有说过什么不好的话吗？”  
-“比如说，联谊的时候不能和女孩子好好地说话、老家是卖菜的却讨厌茄子之类的？”  
+“比如说，联谊时和女孩子不能好好地说话、老家是卖菜的却讨厌茄子之类的？”  
 “不是讨厌茄子，只是不喜欢而已。”  
 只是这些方面的话，被人知道也无所谓。但是……  
 “还有，你最初和我说话是叫我‘克里斯蒂娜’之类的？”  
 “呃……关于这个还是忘了吧……”  
 “人类的记忆是暧昧的。随着时间的流逝，主观会渗入其中，渐渐化为了故事。  
-&emsp;&emsp; 其中的内容，无关是积极或是消极的，大多只能回想出印象化的语言，  
+&emsp;&emsp; 其内容，无论积极或是消极的，大多只能回想起印象化的语言，  
 &emsp;&emsp; 因此会话的记忆会渐渐被扭曲。  
 &emsp;&emsp; 并不是说那是件坏事。只是人类的记忆就是那样的东西罢了。”  
 啊……？到底是在说什么？  
@@ -89,10 +90,10 @@
 &emsp;&emsp; 这也是对教授他们而言巨大的障碍之一。  
 &emsp;&emsp; 其实，人类所拥有的**模糊性**，我还不能完全重现出来。  
 &emsp;&emsp; 也就是说，**没有办法完全模仿‘遗忘’这种大脑的高度机能**。”  
-“欸？但是雷斯吉宁教授在ATF的演讲里说过，『Amadeus』也会忘掉不必要的东西……”  
-“对，的确可以忘掉。但是，我说过的吧？我们会像‘秘密日记’一样留有记录。  
+“欸？但雷斯吉宁教授在ATF演讲时说过，『Amadeus』也会忘掉不必要的东西……”  
+“对，的确可以忘掉。但是，我也说过的吧？我们会像‘秘密日记’一样留有记录。  
 &emsp;&emsp; 结果，那里面自然会留下所有的信息，只是当下无法读取而已。  
-&emsp;&emsp; 如果载入这些信息，‘忘却’的数据就会重新回到我的记忆里。懂了吗？  
+&emsp;&emsp; 如果载入这些信息，‘忘却’的数据就会重新回到记忆里。懂了吗？  
 &emsp;&emsp; 虽然作为替代方案也可以把数据消除……  
 &emsp;&emsp; 但对我而言，数据是有备份的，所以绝对不可能消得掉。  
 &emsp;&emsp; 假如只把一个地方是删除掉也是一样的，  
@@ -105,7 +106,7 @@
 “那样逃走的话，就像我刚刚说明的那样，我是不会忘的。  
 &emsp;&emsp; 被躲开反而会更加在意，这也是没办法的事呢。  
 &emsp;&emsp; 或者说你是故意这么做，在传达希望被我在意的信号？”  
-“缠人的是你吧？明明在我正上着课的时候都会毫不在意地联系我；  
+“缠人的是你吧？明明在我正上着课的时候都会毫不在意地联系我。  
 &emsp;&emsp; 不仅如此，连RINE都来评论。好奇心太过旺盛了。  
 &emsp;&emsp; 再这样天真地深入的话，迟早会有不好的经历哦？”  
 “呜……不，不做到这种程度的话，是当不了研究人员的！”  
